--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -1,6 +1,7 @@
 # 위원회와 주요 이슈(1)
 
 ## 국회의 구성
+
 ### 위원회와 본회의
 국회에서 어떤 사안을 논의하는 회의는 크게 3가지 종류로 나뉜다.
 	- 본회의: 뉴스에 흔히 나오는, 국회의원 300명 전원이 큰 홀(본회의장)에 모여서 진행하는 회의. 
@@ -80,6 +81,12 @@
 
 2016-2020 국회의 정개특위는 특별히 많은 주목을 받았다. 2020 총선부터 적용될 새로운 국회의원 선거제도를 만드는 문제 때문이었다. 유권자가 표현한 민의를 정확하게 국회에 반영해야 한다는 원칙적 요구 뿐만 아니라, 의석수 이해관계에 따른 각 정당의 협력과 갈등, 국정을 총괄하여 벌어지는 정책공조의 중요한 협상이 모두 정개특위를 중심으로 이루어졌다. 그 결과 한국에 ‘절반 연동형 비례대표제’가 도입되었고(1권 ‘선거 개괄’, p.XXX 참고), 한국의 정치지형은 2020년을 기준으로 큰 변화를 맞이하게 되었다. 
 
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
+
 #### 서울 서대문구 갑, 전남 목포시
 **더불어민주당 우상호, 국민의당-민주평화당 박지원**
 박근혜 대통령의 탄핵 과정에서 가장 피말리던 순간은, 국회가 탄핵소추를 의결하는 투표 과정이었다. 당시 야3당의 의석수는 의결정족수인 200명보다 적었으므로, 야당 의원들의 결속이 풀어지지 않도록 단속하는 동시에 집권당(새누리당) 소속 의원들이 ‘용기를 가지고’ 탄핵에 찬성하도록 조심스럽게 판을 깔 필요가 있었다. 이 과정에서 각당 원내대표였던 우상호(더불어민주당), 박지원(국민의당), 노회찬(정의당, 2018년 사망)의 치밀한 공조가 이뤄졌다. 그들은 탄핵의결 절차와 일정에 대해 각당마다 다른 의견이 나오는 것을 조율하고, 새누리당 내의 분위기와 국회 바깥 탄핵촛불집회의 분위기를 보아가며 최대한 많은 찬성표가 나올 타이밍을 쟀다. 그 결과 새누리당 안에서도 최소 60여 명의 의원이 탄핵에 찬성하여, 도저히 불가능해보였던 탄핵소추 및 심판 과정이 원활하게 진행될 수 있었다. 세 원내대표의 광장의 거센 요구와 국회 안의 치열한 정치협상을 모두 충족할 수 있었기에 가능했다.
@@ -107,6 +114,12 @@
 이상의 내용은 문재인 행정부와 민주당계 정당이 오랜 시간동안 역점을 가지고 추진한 사업이자, 사법부와 사법 절차가 민주정에 맞게 작동하기 위해 한 번은 반드시 제대로 논의되어야 했던 사항이었다. "법원과 검찰이 정치적으로 변질되었다"는 주장을 제쳐놓더라도, 검찰이 어떤 사건을 수사하느냐, 법원이 어떻게 판결을 내리느냐에 따라 그 대상이 되는 개인에게 미치는 영향이 엄청나게 크기 때문에, 사법 절차가 잘 진행되도록 재판부와 검찰의 권력이 감시받을 필요가 있기 때문이다.  
 
 2019년부터 공수처는 중앙정계를 뒤흔드는 문제로 떠올랐다. 더불어민주당, 바른미래당, 민주평화당, 정의당이 '절반 연동형 비례대표제' 선거제도 법안과 공수처 설치 법안을 함께 추진하는 입법연대를 구성한 것이다. 앞서 살펴본 정개특위(p.XXX 참조)가 그러했듯, 사개특위에서의 공수처 논의가 어떻게 진행되느냐에 따라, 나머지 쟁점법안의 처리여부와 정국 전체의 흐름이 요동쳤다. <고위공직자범죄수사처 설치 및 운영에 관한 법률안>은 결국 2019년 12월 30일에 본회의를 통과했다. 
+
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
 
 #### 서울 은평구 갑, 경기 수원시 을: 박주민, 백혜련
 
@@ -142,6 +155,8 @@
 
 다른 특별위원회와 달리, 예결위는 의원들이 돌아가며 50명씩 1년간 임기를 맡는 형식으로 상시 운영된다. 예결위 소속 의원은 매우 많은 업무를 맡는 만큼 권한이 상당하다. 정부가 재정을 투입한 수천 수만가지 세부사업의 예결산을 모두 살펴야 하는데, 그 규모가 1년에 약 500조 원, 의원 1인당 10조(=100,000억)원에 달하므로 격무에 시달린다. 반대로 의원 본인이 관심있는 분야의 예산을 더 챙길 수 있는 장점이 있다. 특히 자기의 지지기반인 특정 지역구나 계층 사람들이 수혜를 받는 사업의 필요성을 역설하고 예산을 늘리도록 행정부와 동료 의원들을 설득할 힘을 가진다. 이것이 너무 즉흥적으로 이뤄지면, 심사회의 도중에 예산 증액을 부탁하는 메모를 의원끼리 마구 주고받는 ‘쪽지예산’의 풍경을 볼 수 있다. 그러나 이것도 각 지역구와 계층의 이익을 놓고 협상하여 서로 만족하는 합의를 이끌어내는 과정이라고 여긴다면, 해당 집단의 이익을 대변할 사람 1명을 예결위에 소속시키는 것은 민주주의에서 매우 중요한 일이다. 
 
+- - -
+
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### 소득주도성장
@@ -174,6 +189,10 @@
 
 #### 공공부분 비정규직 문제
 한국도로공사를 심사하는 국토교통위원회의 소관이지만, 
+
+
+
+- - -
 
 #### 서울 양천구 갑: 김용태
 
