--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -24,6 +24,13 @@
 
 그렇기 때문에, 아직 의회와 행정부에서 거의 주목받지 못하고 있지만, 여성가족위원회와 여성가족부(행정부)의 역할과 논의가 매우 중요하다('여성'이라는 단어가 정 그렇게 싫다면, 단어를 '성별'이라고 바꾸고 생각하자). 대부분의 행정기관이 행정부 안에서의 업무에 따라 분리되어 있고, 개인과 생활공동체의 일상과 관련된 사안을 통합적·거시적으로 논의하기 가장 적절한 장소가 여가위이다. 성범죄 대응에 관한 논의는 경찰청을 담당하는 행안위에서 할 수 있고, 한부모가정의 아동교육 지원에 관한 논의는 교육위에서 할 수 있지만, 성범죄의 예방교육이나 피해지원, 또는 한부모가정이 겪는 문제에 대한 실태조사 등의 사업은 여가위에서 논의될 수 밖에 없기 때문이다.
 
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
+
+
 
 
 ## 외교안보, 안전, 방재 관련
@@ -60,9 +67,20 @@
 ### 여성가족위원회(여가위) #2
 개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 '가족' 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 '방재 및 재난피해지원' 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
 
+
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
+
 #### 서울 강동구 갑: 진선미
 
 #### 광주 광산구 을: 권은희
+
+
+
+
 
 ## 교육, 문화, 학문 관련
 **활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
@@ -85,6 +103,14 @@
 
 문체위는 두 가지 측면에서 의원들의 인기를 얻는다. 첫째는 특정 문화체육 관련 단체, 예를 들어 '대한XX협회', '대한프로XX연맹' 등의 회장직을 맡은 국회의원이 문체위에 들어가는 경우이다. 단체가 국회의원을 회장으로 초빙하여 그의 정치적 발언력을 통해 여러 문제를 해결하고자 하는 것인데, 국회의원의 입장에서도 해당 단체의 조직력과 지지가 인지도 상승에 도움이 될 것으로 기대하고 이를 수락하게 된다. 둘째로, 특정 문화체육 분야의 유명인사가 국회의원이 되어 자신의 직군을 대표하여 활동하는 경우가 있다. 2016-2020 국회의 가장 대표적인 예로, 바둑기사 조훈현이 새누리당 비례대표로 당선된 후 문체위에서 일하며 <바둑진흥법>을 대표발의하여 통과시킨 경우가 있다. 
 
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
+
+
+
 ## 산업, 통상, 환경, 에너지, 사회간접자본 관련
 **인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 
 
@@ -103,3 +129,10 @@
 국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육로/항공 교통시설 관리업무이다. 
 
 지역구 국회의원들은 국토위에 배정되기를 선호하는 경우가 매우 많다. 아무래도 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 가장 
+
+
+- - -
+
+### 국정의 주요 이슈 & 눈여겨볼 선거
+
+- - -
