--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -1,4 +1,6 @@
-### 충청권
+# 남부지방 권역
+
+## 충청권
 **중원은 어느 정당에게도 호락호락하지 않았다. 지역에 안겨주는 실익의 크기, 또는 충청 출신 정치인의 발언권 크기에 따라 표심을 화끈하게 정해왔다.**
 
 중앙정계라는 게임서버 안에서 ‘충청의 맹주’라는 타이틀은 매우 먹어주는 아이템이다. 호남권-영남권의 지역주의가 아주 강고했던 1990년대에, 민주당계 정당과 보수주류 정당은 전국단위 선거에서 승리하려면 충청권 유권자를 반드시 자기 편으로 만들어야 했다. 충청권 출신 정치인들도 이 구도를 적극 활용해서 중앙정치에서의 몸값을 높였다. 충청권 유권자를 내세우며 자신이 속한 정당에서 최대한 많은 지분을 가져간다던가, 자신이 활동하는 데에 더 유리한 정당으로 이적하는 행보를 자주 보였다. 기존 정당이 ‘충청의 맹주’를 홀대할 때 그들은 당을 새로 만들기도 했다. ‘충청권 제3정당’은 자신을 정통보수로 지칭하며 보수주류 정당과도 각을 세웠고, 수십 명의 국회의원을 가진 채 다른 정당과 연합하고 공조하는 방식으로 국회에서 영향력을 끼쳤다. 
@@ -9,14 +11,14 @@
 
 충청권 제3정당이 2012년에 마지막으로 총선에 참여한(자유선진당) 직후 보수주류 정당에 흡수통합되면서 주요 소속 국회의원들은 민주당계 또는 보수주류 정당으로 뿔뿔히 흩어졌고, 한동안 충청권 정치인들이 애타게 바라본 대권주자 - 이인제, 안희정, 이완구 - 들은 모두 이전과 같은 위상을 되찾기가 사실상 불가능해졌다. 새로운 ‘충청의 맹주’가 떠오르지 않는 진공 상태가 계속되는 동안, 각 중앙당과 지역구 후보들 입장에서 충청권의 총선은 기존의 문법과 전혀 달라서 어떻게 흘러갈 지 예측하기 어려울 것이다. 마치 김종필이 `1980년의 정국(박정희가 암살된 1979년 12월과, 전두환이 쿠데타로 정권을 찬탈한 1980년 5월 사이의 정국)`을 춘래불사춘(春來不似春: 봄이 왔지만 봄 같지 않다)이라고 표현했듯이.  
 
-#### 대전광역시
+### 대전광역시
 대전을 정치성향 기준으로 두 권역으로 나누자면, 대전을 동서로 나누며 지나가는 유등천이 그 경계가 된다. 동대전은 개화기에 경부선 대전역의 탄생과 함께 발전한 원도심이고, 서대전은 1970년대부터 대덕연구단지와 정부대전청사를 기반으로 발전한 신도시다. 두 지역의 개발 격차는 소득과 교육과 인구연령의 격차로 확대되었는데, 이것이 그대로 정치성향의 차이로 발전한 셈이다. 2012년과 2016년 총선에서는 민주당계 정당과 보수주류 정당이 유등천을 기준으로 정확하게 동/서대전을 나누어 가져서, 두 당이 3:3 또는 4:3석으로 동률을 이뤘다. 
 
 보수주류 정당 입장에서 이는 엄청난 발전이다. 1988년부터 2008년까지 6번의 총선에서 보수주류 정당은 대전에서 전체 35석 중 단 2석만 승리했는데, 그나마 그 중 한 번인 `김원웅(대덕구: 1992~ 96, 2000~ 08)`은 민주당계 정치인이 당이 합당되어 보수주류 정당(한나라당)으로 넘어왔다가 이내 민주당계 정당(개혁국민신당->열린우리당)으로 돌아간 경우였다. 보수주류 정당이 2012년부터 약진을 하는 계기는, 대전 최다선 `강창희(중구: 1985~ 88, 92~ 2004, 12~ 16)`의 예에서 보듯 충청권 제3정당에 몸담았던 인물들이 보수주류 정당으로 합류하면서 세가 커진 것, 그리고 (보수주류 정당이 그나마 힘을 썼던)지방선거를 통해 입성한 정치인이 국회의원으로 성장한 것이었다. 강창희를 제외한 나머지 보수주류 정당(새누리당)의 국회의원 4명(`이장우(동구: 2012~ )`, `이은권(중구: 2016~ )`, `박성효(대덕구: 2012~ 14)`, `정용기(대덕구: 2014~ )`)는 모두 그 이전에 대전시장 또는 해당 지역구 구청장으로 당선된 바 있다.
 
 그간 대전의 보수적 표심을 대표한 것은 보수주류 정당이 아니라, 보수적 성향의 충청권 제3정당이었다. 충청권 제3정당 보수주류 정당(민주자유당)에 흡수되어 없었던 1992년을 제외하고, 1988~ 2008년 사이의 5번 총선에서 30석 중 19석을 승리했고, 1992년 총선에서도 보수주류 정당(1석)보다 더 많은 의석(2석)이 무소속의 승리로 돌아갔다. 다만 이것만 두고 대전의 표심이 보수적이라고 단정짓기도 어렵다. 2004년 민주당계 정당의 전승(열린우리당: 6석 중 6석)과 2008년 충청권 제3정당의 압승(자유선진당: 6석 중 5석)은 모두 충청권 행정수도 사업을 추진(노무현 행정부)하거나 반대(이명박 대통령의 서울시장 재임 시절)하려는 시도와 연관되어 있으며, 이 때 당적을 열린우리당에서 자유선진당으로 옮기며 두 번 모두 승리한 `권선택(중구: 2004~ 2012)`과 `이상민(유성구: 2004~ )`의 예시도 있다. 대전의 표심은 보수적이었다기 보다, 대전과 충청에 가장 이익이 될 정당, 또는 그 이익을 가장 잘 대변할 정치인을 잘 지켜주는 정당(?)으로 몰렸다고 보아야 할 것이다. 
 
-#### 세종특별자치시
+### 세종특별자치시
 지역구 1석의 세종특별자치시지만, 이 곳만큼은 따로 떼어서 설명할 필요가 있다. 매우 큰 도시(행정중심복합도시, 이하 ‘행복도시’)와 매우 큰 농축산업촌이 공존하는 특성상, 매우 특이한 선거구도 아래에서 매우 특이한 인물이 중진 정치인으로 자리잡고 있기 때문이다. 
 
 2012년에 탄생한 세종시의 역대 지역구 국회의원은 1명, 현재 더불어민주당 대표이기도 한 이해찬이다. 그는 과거에 이미 서울 관악구 을에서 내리 5선(1988~ 2008)을 하고 교육부 장관(1998~ 99)과 국무총리(2004~ 06)를 지낸 거물이었다. 2008년 불출마 이후 정계은퇴 상황이었던 그는 2012년에 다시 소환되는데, 당시 충청권 농어촌 조직세력이 약했던 민주당계 정당(민주통합당)이 세종시에 내세울 수 있었던 최선의 후보였기 때문이다. 세종시가 이제 막 탄생하긴 했지만 아직 중앙행정기관이 이사오지 않았고, 따라서 당시 세종시의 유권자 구성은 충청권의 일반 농촌과 다를 바 없었다. 이해찬은 충남 출신이고, 세종시 계획이 확정될 당시의 국무총리라는 확실한 명분이 있었다. 이 명분을 바탕으로 그는 충청권에서 강성했던 보수주류 정당(새누리당)과 충청 기반의 중도보수정당(자유선진당)을 따돌리고 당선된다. 
@@ -25,37 +27,39 @@
 
 세종시의 인구는 2012년의 약 10만 명에서 이제 약 34만 명이 되었고, 평균연령은 8년 전과 비교해 3.4세나 낮아져서(전국 전체 평균연령은 같은 기간동안 3.5세 높아졌다) 전국에서 가장 젊은 광역시·도가 되었다. 그 사이에 치러진 선거를 보면, 더불어민주당과 정의당의 지지율이 점점 증가하는 경향이 분명히 드러난다. 또한 인구 증가로 인해 이제 세종시는 갑/을 선거구로 니뉘어 2명의 국회의원을 선출한다. 문제는 이 새로운 구도 안에서 과연 어떤 정당과 인물이 새롭게 자리를 차지하느냐일 것이다.
 
-#### 충청북도
+### 충청북도
 충청북도가 보통 대전·충남과 묶여 충청권이라고 불리긴 하지만, 충북의 구도는 나머지 충청권과 사뭇 다르다. 충북에서는 충청권 제3정당의 세가 상대적으로 약해서, 민주당계 정당이나 보수주류 정당을 압도하지 못했다. 1988년부터 충북에는 매 총선마다 7~ 9개의 지역구가 배정되었는데, 충청권 제3정당은 전국적으로 가장 강성했던 1996년 총선(자유민주연합)을 제외하면 언제나 3석 이상을 차지하지 못했다. 1996년에도 자민련이 전체 8석 중 5석을 차지하긴 했으나, 이 중 과반득표를 얻은 지역구는 1곳도 없었다. 같은 선거에서 자민련은 대전·충남의 전체 20석 중 19석을 차지했고, 그 중 6석이 과반득표로 당선되었다. 
 
 충북을 좀 더 잘 설명하기 위해서는, 정당 구도보다도 인물 구도를 살펴보아야 한다. 2010년대에 충북에서 국회의원을 역임한 사람 중에서, 4선 이상의 인물이 무려 5명이다. `정우택(진천군-음성군: 1996~ 2004, 청주시 상당구: 2012~ )`, `오제세(청주시 서원구: 2004~ )`, `송광호(제천군-단양군: 1992~ 96, 2000~ 04, 08~ 16)`, `변재일(청주시 청원구: 2004~ )`, `이용희(보은군-옥천군-영동군: 1973~ 79, 85~ 88, 2004~ 12)`. 이 중 정우택, 송광호, 이용희 3인의 당적변경 횟수가 총 6회에 달한다. 게다가 이것은 `1995년부터 공직선거 8전 8승(충주시장 3선, 충주시 국회의원 2선(2004~ 10), 충청북도지사 3선)`을 거둔 이시종을 제외한 기록이다. 임기의 연식에서 느껴지듯, 충북의 각 지역구에서 수십 년째 출마하여 다선하는 국회의원의 경우가 많다. 물론 지역마다 다선 의원이 몇 명씩은 있지만, 정치인의 세대교체가 빠른 편인 한국에서 선거구가 8개 내외인 충북에서만 4선 의원이 5명 나온 것은, 의원 한 명 한 명이 당적까지 바꿔가며 그 지역을 꽉 잡고 있다고 설명할 방법 밖에 없다. 
 
 이는 지역간 교류가 단절된 충청북도의 지리적 특성 때문으로 보인다. 충북은 서울-부산 사이의 경부축에서 살짝 비껴난 위치 때문에 전국단위의 교통 인프라 발전의 혜택을 많이 받지 못했다. 게다가 충북 인구의 절반(약 80만)을 차지하는 청주시가 충청북도를 가운데에서 분절한다. 이 때문에 충북의 각 지역은 외부와의 교류가 많지 않고, 각 지역 안에서 독자적인 정치구도를 가진다. 이런 지역에서는 인구구조나 경제구조가 크게 변화하지 않는 한, 지역정계의 정점에 위치한 인물이 쉽게 교체되지 않고 꾸준히 공직선거에 출마할 기회를 잡을 수 있다.
 
-#### 충청남도 
+### 충청남도 
 충청남도의 당대표급 중진이라면 무릇 여러 당을 거쳐야 한다. 이건 절대 과장이나 비하가 아니다. 1980년대부터 2000년대까지 충청권을 중심으로 이어진 정당 이합집산 속에서 살아남으려면 판세를 보고 부지런히 당을 바꿔야 했고, 여러 당을 거치더라도 본인 스스로 지역구에서 살아남을 정도의 개인기를 갖춰야 한다. ‘충청의 맹주’라는 호칭은 결코 쉽게 얻어지는 것이 아니다. 이 시기에 야당 당대표를 지낸 적 있는 충남 출신 정치인 `김종필(부여군: 1963~ 71, 78~ 80, 88~ 2000)`, `유한열(대덕군-금산군-연기군: 1978~ 92)`, `김용환(보령시: 1988~ 2004)`, `이인제(논산시-계롱시-금산군: 2000~ 16)`의 충청남도 지역구 당선횟수를 모두 합치면 18선인데, 창당하거나 `당적을 옮긴(당명 교체, 합당, 쿠데타에 의한 정당해산은 제외)` 횟수는 14번에 달한다. 2010년대 보수주류 정당의 중진인 `이완구(청양군-홍성군: 1996~ 2004, 부여군-청양군: 13~ 16)`와 `정진석(공주시-연기군: 2000~ 04, 05~ 08, 공주시-부여군-청양군: 2016~ )` 역시 보수주류와 충청권 제3정당 사이에서 흔들리며 각 2번의 탈당 경력이 있다. 충남 유권자들 입장에서는 계속해 당을 번갈아가며 투표하지만, 결국 같은 인물이 뽑히는 일이 잦았다.
 
 충남권 제3정당이 사그라들어서 충남에도 이념에 따른 정당구분이 자리잡는 2016년 총선을 살펴보면, 수도권이나 대전·세종과 맞닿아 개발이 활발히 이뤄지는 충남 북부와 논산·계룡, 개발에서 소외되는 충남 서부/남부의 차이가 드러난다. 비례대표 정당투표를 기준으로 보면, 새누리당(보수주류)의 득표율이 40%가 넘은 보령, 태안, 금산, 부여, 홍성, 청양, 예산과, 더불어민주당(민주당계)과 국민의당(전라권 민주당계 제3정당)의 득표율 합이 50%를 넘은 천안, 아산, 논산, 계룡, 당진으로 갈라지며, 지역구 당선 결과도 대체로 이 경계선을 따라 새누리당과 더불어민주당이 서로 나눠가지는 모습을 취하고 있다. 이 구도가 만들어지는데 가장 크게 기여한 인물 두 사람은 (위의 ‘충청의 맹주’들과 달리) 당을 자의로 바꾼 적이 없었다. 민주당계 소수정당(1995년 통합민주당)에 몸담으며 계속 낙선하다가 당이 보수주류 정당(한나라당)에 흡수되면서 이동한 `홍문표(홍성군-예산군: 2004~ 08, 12~ )`, 그리고 현재까지 충남에서 한 지역구에서 한 정당(민주당계)으로만 4연속 당선된 유일한 인물인 `양승조(천안시 갑/을: 2004~ 18)`. 두 인물을 2004년과 2008년에 각각 자신의 소속당에서 ‘살아남은 유일한 충남 당선자’라는 타이틀을 본의 아니게 거머쥐었고, 충남에서 정치인으로 오래 살아남는 새로운 방법을 선보였다. 
 
 
-
-#### 주목할 지역
-
-##### 대전 유성구 갑/을
-
-##### 충북 청주시 상당구, 충북 보은군-옥천군-영동군-괴산군
+- - -
 
 
-##### 충북 제천시-단양군
+### 주목할 지역
+
+#### 대전 유성구 갑/을
+
+#### 충북 청주시 상당구, 충북 보은군-옥천군-영동군-괴산군
 
 
-##### 충남 논산시-계룡시-금산군
+#### 충북 제천시-단양군
+
+
+#### 충남 논산시-계룡시-금산군
 
 
 
 
 
-### 전라권
+## 전라권
 **민주당계 정당끼리의 노선갈등은 전라권 선거에 영향을 미쳤다. 민주당계 정당이 집권한 상황에서 이는 정권의 행동에 큰 영향을 미칠 것이다.**
 
 삼국시대부터 1960년대까지, 전라권은 호남평야에서 나오는 풍부한 농산물을 바탕으로 한반도에서 가장 부유했던 지역이었다. 부유한 지주와 교육의 기회가 적은 농민들이 보수적인 표심을 보여주는 것은 어쩌면 당연한 일이다. 호남 대표 정치인 김대중이 민주당계 정당의 대통령 후보로서 박정희와 맞붙었을 때(1971) 전라권은 김대중에게 득표율 60%대의 압도적 지지를 보내긴 했지만, 대선은 대선이고, 같은 전라권 정치인들이 지역구에서 맞붙는 총선에서는 전라권이 특별히 민주당계 정당을 더 지지하지는 않았고, 의석수도 언제나 1기 군사정권의 집권당인 민주공화당이 다수를 차지했다. 충청권/경북권/경남권과 마찬가지로 보수주류 정당이 농촌에서 매우 강하고, 도시에서 민주당계 정당이 강한 구도를 유지했다. 
@@ -70,7 +74,7 @@
 결과만 놓고 보면, 지금까지 전라권의 민주당계 정당 지지자들은 어느 쪽이든 새로 창당한 정당에 더 많은 힘을 실어주었다. 전라권 유권자가 현재의 민주당계 정당 체계가 변화하기를 오랫동안 바라고 있다는 의미로 해석할 수 있다. 2020년 총선에서는 그 변화의 4년에 대한 냉정한 평가가 이뤄질 것이다. 
 
 
-#### 광주광역시
+### 광주광역시
 2004년 총선에서 ‘민주당계 주류정당’(열린우리당)이 마지막으로 광주의 7석 전체를 승리한 것을 마지막으로, 차갑게 끓어오르는 표심이 어디로 향할지 알 수 없었던 광주의 선거구도는 매우 복잡했다. 1954년 총선 이후 광주 최초의 무소속 당선자(2000)였던 강운태는 2008년에 민주당 경선에서 탈락하자 또 무소속으로 출마해 당선되었는데, 이 작은 균열은 광주 유권자들이 민주당계 정당에게 느끼는 ‘왠지 모를 찝찝함’과 변화의 필요성으로부터 나온 것으로 보인다. 지역구국회의원 선거에서 민주당계 정당에 대한 경고신호는 이후에도 수차례 있었다.
 
 - 2010년 남구 보궐선거에서 사민주의 정당(민주노동당)의 오병윤이 44.1%를 득표. 
@@ -81,31 +85,33 @@
 
 그리고 그 신호가 2016년 총선에서 폭발한다. 지역구 8석에서 전부 국민의당(전라권 민주당계 제3정당)이 승리한 것이다. 국민의당은 모든 지역구에서 과반득표에 성공했고, 더불어민주당(민주당계 주류정당)은 한 곳(광산구 을)을 제외하면 모두 40% 미만의 득표율을 기록했다. 이 때의 당선인 대열에는 박주선, 천정배, 김동철 등 중앙의 무게있는 중진 뿐만 아니라, 김경진, 권은희 등 향후 주목받는 신진 정치인들도 있었다. 물론 이런 변화가 영구적인 것은 아닐 것이니, 2020년 서구 갑 재선거에서는 더불어민주당의 송갑석 후보가 83.5%의 압도적 득표율로 당선되었기 때문이다. 
 
-#### 전라북도
+### 전라북도
 1980년대까지만 해도 지역주의 구도가 그다지 강고하지 않았다는 증거를 전북에서 찾을 수 있다. 지금 상상하기는 어렵지만, 1988/92/96년 총선의 전북에서는 보수주류 정당 후보가 30%대를 득표하는 경우가 `매우 흔했으며(1988년 지역구 14석 중 9석, 92년 14석 중 8석, 96년 14석 중 6석)`, 심지어 김영삼 행정부의 국무총리(`황인성(진안군-장수군-무주군: 1981~ 85, 92~ 96)`)와 노태우 행정부의 `관선 전북지사(1995년 지방자치제가 실시되기 이전까지 도지사는 중앙정부가 임명하는 공무원이 역임했다.)`(`강현욱(군산시: 1996~ 2002)`)이 당선되기도 했다. 여기에는, 전북 출신으로 70년대 김영삼/김대중과 비견되었던 민주당계 대선주자 정치인 `이철승(전주시-완주군: 1954~ 61, 71~ 80, 85~ 88)`이 군사정권에 유화적인 태도를 취했다가 양김에 의해 사실상 퇴출되었던 역사도 한몫 했을 것이다. 그러나 98년 김대중 행정부의 탄생을 기점으로 보수주류 정당은 전북에서 두 자리수 득표율을 기록하지 못한다. 96년 보수주류 정당 유일의 당선자 강현욱이 2000년에 민주당계 정당에 입당하여 재선한 것이 그 상징적인 장면이다. 전북에서 그 다음 보수주류 정당 당선인인 `정운천(전주시 을: 2016~ )`이 등장하는 데에 정확하게 20년이 걸린다. 
 
 이후 중앙정계에 족적을 크게 남긴 전북의 대선주자급 정치인은 두 명이다. MBC 앵커 출신으로 김대중에게 발탁되어 한때 당내 개혁파 중 대중적으로 가장 잘 알려진 인물이었던 `정동영(전주시 덕진구: 1996~ 2004, 09~ 12, 16~ )`, 민주당계 정당의 정책통이자 부드러운 리더 역으로 유명한 `정세균(진안군-무주군-장수군-임실군: 1996~ 2012)`. 열린우리당 창당의 주역이었던 이들의 존재는 2004년 총선에서 전북이 새천년민주당(전라권 민주당계 정당)이 아닌 열린우리당에 압도적 지지를 보내는 중요한 원인이 되었다. 그러나 그 이후 두 인물의 행보가 크게 엇갈린다. 정동영은 보수주류 정당이 강세인 서울 동작구, 강남구 등으로 차출되어 연거푸 낙선하는 반면, 정세균은 전북에서 4선을 한 뒤 서울 종로로 차출되어 연거푸 대승을 거둔다. 2016년 총선에서 이것이 중요한 분기점이 된다. 정세균을 필두로 한 더불어민주당(민주당계 주류정당)의 전북 세력이 약화되고, 낙선 끝에 전북으로 돌아온 정동영은 국민의당(전라권 민주당계 제3정당)으로 입당한다. 두 세력이 맞붙은 결과, 각 지역구에서 두 당은 대체로 42%:45% 정도의 득표율로 호각세를 이뤘다. 다만 실제 당선인의 숫자로 보면, 더불어민주당 2석, 국민의당 7석으로 그 차이가 훨씬 벌어진다. 
 
-#### 전라남도 
+### 전라남도 
 전라권 안에서 ‘전라권 민주당계 제3정당’의 세력이 가장 강한 곳은 전통적으로 전라남도였다. `김대중(목포시: 1963~ 71)`의 정치인생이 시작된 곳이었고, 1988년 민주화 이후에는 `권노갑(목포시: 1988~ 96)`, `박상천(고흥군-보성군: 1988~ 2004, 08~ 12)`, `한화갑(무안군-신안군: 1992~ 2008)`, `박지원(목포시: 2008~ )` 등 동교동계의 핵심으로 2000년대 초까지 김대중 행정부와 민주당계 정당을 이끌었던 인물들이 포진한 곳이었다. 이들은 노무현이 대선후보로 급부상한 2002년 즈음부터 민주당계 주류에서 비주류로 위치가 바뀌면서 민주당계 내부 세력갈등을 이어간다. 어쨌든 당내 주류였던 경험이 있기에, 전남의 동교동계은 자체적인 정치적 영향력을 가지고 있을 뿐만 아니라, 향후 민주당계 주류세력과 갈등에 놓이는 정치인들과 연대하여 독자적으로 활동할 수 있는 활동영역을 개척하기도 했다. 2004년 총선에서 열린우리당에 밀려 당세가 크게 위축되었던 새천년민주당의 지역구 의석 5석이 모두 전남에서 나왔다. 또한 2008년 총선에서는 통합된 민주당계 정당(통합민주당)의 공천에서 탈락하자 불복하고 무소속 출마한 후보가 3명(전체 지역구 12석)이나 당선되었고, 이들은 모두 복당하여 2012년 총선에서도 모두 생환하는 강인한 생명력을 보여줬다. 2016년 총선에서는 국민의당이 전체 10석 중 8석을 차지한다.  
 
 물론 민주당계의 계통 내부에서 정파/정당 사이의 경계가 그렇게 뚜렷하지는 않으므로, 정치인들의 분류가 천년만년 지속되는 것은 아니다. 대표적으로, 2004년 새천년민주당 소속으로 당선된 `이낙연(담양군-함평군-영광군-장성군: 2000~ 14)`은 2016년의 국민의당으로는 합류하지 않았으며, 이후 문재인 행정부의 국무총리를 지내서 더불어민주당의 중앙정계 핵심인물로 떠오른다. 
 
 한편 전남에서는 민주당계 정당의 오래된 갈등에 지친 사람들이 다른 대안 - 사민주의 정당이나 보수주류 정당 - 을 찾는 목소리도 크다. 사민주의 정당의 입장에서는, 경남권 이외 지역 최초의 지역구의원(`김선동(순천시-곡성군: 2011~ 14)`)이 탄생한 곳이면서, 2016년 총선에서 수도권과 경남권 이외 지역에서 가장 비례대표 정당득표율이 높은 시(목포시, 11.48%)와 군(영암군, 8.41%)이 위치한 곳이다. 보수주류 정당 입장에서는, 18년 만에 최초의 전라권 당선자(`이정현(순천시: 2014~ 20)`)를 배출한 곳이기도 하다. 
 
-#### 주목할 지역
+- - -
 
-##### 전북 군산시
+### 주목할 지역
 
-##### 전북 남원시-임실군-순창군
+#### 전북 군산시
 
-##### 전남 목포시
+#### 전북 남원시-임실군-순창군
 
-##### 전남 순천시
+#### 전남 목포시
 
-##### 
+#### 전남 순천시
 
-### 제주특별자치도
+#### 
+
+## 제주특별자치도
 **’뭍’과 분리된 제주도의 특수한 사회환경, 그로 인해 벌어진 아픈 역사. 전국에서 가장 진보적인 목소리를 내는 제주도의 표심을 이해하는 키워드이다.**
 
 제주도에서 국회의원 총선거는 언제나 아픈 기억을 떠올리게 한다. (남북한 통합 총선거가 아닌) 남한 단독의 총선거와 정부수립을 반대하는 시민과 경찰이 충돌하여, 1948년부터 6년간 학살이 지속되었던 제주 4·3 사건 때문이다. 1988년부터 한국 총선은 4월 초중순에 시행되었고, 때문에 제주도 각지에서 4·3 추념 행사와 합동 제사를 지내는 4월 초를 거치면, 그 기억과 감각은 유권자에게 남아 제주도 선거구도에 알게 모르게 영향을 끼칠 수 밖에 없다.
@@ -116,12 +122,12 @@
 
 한편 제주도의 유권자는 중앙정치가 다당제로 개편되는 과정과 맞물려서, 사민주의 정당과 녹색당에 새로운 기회를 주고 있다. 중앙정부에서 지속적으로 추진하는 제주도 내 개발사업과 관광진흥사업에 대해, 사회경제적 불평등과 자연환경 파괴를 일으킨다는 피로감을 진하게 느끼기 때문으로 보인다. 2018년 지방선거의 제주도의회 비례대표 정당투표에서, 노동당(득표율 1.83%)과 녹색당(4.87%)은 각각 전국 시·도의회 선거 중 최다득표율을, 정의당(11.70%)은 전라북도, 광주광역시 다음으로 전국에서 가장 높은 득표율을 기록했다. 특히 같은 날의 제주도지사 선거에서 녹색당(고은영)은 득표율 3.53%로 2개의 보수정당(자유한국당, 바른미래당) 후보를 모두 제치고 3위를 차지하는 파란을 일으키기도 했다. 보수정당 출신의 현임 도지사(원희룡)가 무소속으로 출마한 이유도 크지만, 그럼에도 불구하고 제주도가 보여주는 진보정당에 대한 개방성은 주목할 만 하다. 
 
-##### 제주 제주시 갑
+#### 제주 제주시 갑
 
-##### 제주 서귀포시 (서귀포 국제공항)
+#### 제주 서귀포시 (서귀포 국제공항)
 
 
-### 경북권
+## 경북권
 **현재의 보수주류 정당이 완전히 사라질 수 없다면, 경북의 표심을 통해 그 정당이 더 보수적으로 혹은 덜 보수적으로 변하는지 살펴볼 가치가 충분하다.**
 
 많은 사람들이 경북권을 ‘보수의 성지’로만 여기며 간단하게 퉁치고 지나가지만, 그 보수적인 표심이 어떻게 표현되는지 알아보기 위해서라도 경북권을 반드시 세심히 살펴봐야 한다. 한 선거구에서 2명을 선출하던 1973~ 85년에에는 이 곳에서도 보수주류 이외의 정당들이 주로 2위로(간혹 1위로) 당선되는 일이 많았다. 이 시절 당선된 ‘이외 정당’ 출신으로는 국회의장과 부의장을 각각 지낸 이만섭(대구 중구·서구: 1979~ 88)과 홍사덕(경북 영주시-영풍군-영양군-봉화군: 1981~ 88)같은 꼬장꼬장한 거물들도 있었다. 이 경험이 남아있는 경북권은 보수주류 정당에게 호락호락하게 표를 안겨주지 않았다. 그 격변의 순간을 잠깐 살펴보자. 
@@ -135,13 +141,13 @@
 이처럼 경북권에서는 보수주류 정당 집권 시절, 대통령과 가까운 계파가 다른 계파를 공천에서 떨어뜨릴 때 이를 거세게 반대하는 모습을 보여줬다. 2020년 총선을 불과 2달 앞두고 보수계열 정당이 한꺼번에 통합(미래통합당)된 상황에서, 미래통합당 내의 공천이 어떻게 이루어지느냐에 따라 경북권의 선거 결과는 완전히 뒤바뀔 수 있다. 
 
 
-#### 대구광역시
+### 대구광역시
 경상북도에 비해서 상대적으로 정당의 다양성이 풍부한 대구를 통해, 보수적이고 우파를 지향하는 표심이 어떻게 분화될 수 있는지 살펴볼 수 있다. 2016년에 당선된 국회의원들의 2018년 당시 당적을 기준으로 살펴보자. 
 대구의 도심부, 그리고 `박근혜(달성군: 1998~ 2012)`의 지역구였던 달성군에는 박근혜 행정부에서 청와대 수석비서관이나 행정부 장관(급)으로 일한 뒤 친박계의 등용으로 공천된 인물(`곽상도(중구·남구: 2016~ )`, `정종섭(동구 갑: 2016~ )`, `추경호(달성군: 2016~ )`)이 초선으로 공천되어 무난하게 당선되었고, 달성군 인근의 친-박근혜 극우정당(우리공화당)을 창당한 대선후보(`조원진(달서구 병: 2008~ )`)가 3선을 하고 있다. 이들은 모두 강력한 친박계로, 박근혜 대통령의 탄핵 이후에도 보수주류 정당(자유한국당)이나 극우정당에서 활동한다. 본래 대구를 거쳐간 중진 - `박준규(동구·중구·달성군: 1960~ 61, 71~ 80, 88~ 2000)`, `박철언(수성구 갑: 1992~ 2000)`, `홍사덕(서구: 2008~ 12)` - 들이 과거 군사정권에 참여하거나 친박계의 중심인물로 활약했음을 감안하면, 대구는 보수주류 정당, 특히 당내 전통적 보수세력이 언제나 공들여서 의원을 키워내는 인큐베이터 역할을 했다고 볼 수 있다.   
 
 그러나 그 반대편의 대구 북동부를 살펴보면, 보수개혁 정당(바른정당->바른미래당)의 핵심 중진이었던 `유승민(동구 을: 2005~ 20)`, `주호영(수성구 을: 2004~ )`, 그리고 민주당계 정당(더불어민주당)의 `김부겸(수성구 갑: 2016~ )`, `홍의락(북구 을: 2016~ )`이 등장하여 그 성향이 극적으로 바뀐다. 이들의 지역구가 대구 안에서도 대표적인 부촌(수성구) 또는 대구 외곽의 위성도시와 함께 새로 개발되는 거주지와 공업단지로 이루어져 있다는 점이 주목할 만 하다. 사실 이 지역에서는 2004년 이후 민주당계 정당의 계속되는 도전이 있었다. 노무현 대통령의 청와대 특별보좌관으로 1988년부터 2005년까지 수성구, 중구, 동구에서 출마하여 최대 44%의 득표율을 올렸던 이강철, 새천년민주당 대표로 서울에서 5선을 했다가 2004년 수성구에서 도전한 조순형, 마찬가지로 경기 고양시의 재선 국회의원이었으나 2008년 수성구에 도전한 유시민 등. 몇십 년째 이어진 거물들의 꾸준한 출마는 대구의 보수적인 표심이 다른 정당들을 통해 표출될 통로 하나를 아주 천천히 만드는 기반이 되었다.  
 
-#### 경상북도 
+### 경상북도 
 어쩌다 보니, 경북에서는 2010년대 보수주류 정권 치세의 상징과도 같은 인물들이 계속해서 등장했다. 이명박 대통령의 친형으로 당시 ‘실세’로 일컬어진 `이상득(포항시 남구-울릉군: 1988~ 2012)`, 2016년 국회 필리버스터의 발단이 되는 <국민보호와 공공안전을 위한 테러방지법>을 대표발의한 `이철우(김천시: 2008~ 18)`, 이명박-박근혜 행정부에서 모두 경제관련 부처 장관을 지낸 `최경환(경산시-청도군: 2004~ 19)`이 그 대표적인 인물들이다. 민주당계 정당 입장에서는 경상북도에서 후보를 구하는 것 조차 어렵고, 그나마 사민주의 정당이 무언가를 해보려고 해도 공업화 수준에 비해 노동자 조직이 너무 약해서 경남권에서와 같은 약진을 기대할 수 없었다. 이런 구도에서 경상북도 의원들은 보수정권 치세 동안, 낙선 걱정 없이 마음 편하게 자신의 ‘소신’을 밀어붙일 수 있었다. 
 
 다만 2000년대까지만 해도 보수주류 정당과 대항하는 두 명의 중요 정치인이 있었다. 한 명은 포항제철(현 POSCO) 설립기의 회장을 역임한 `박태준(포항시 북구: 1997~ 2000)`이고, 또 한 명은 노태우와 김대중 행정부에서 각각 청와대 비서관으로 일한 `김중권(영덕군-청송군-울진군: 1981~ 92)`이다. 두 인물 모두 보수주류 정당을 통해 군사정권에 직간접적으로 참여했지만, 경북권으로 세력을 넓히려던 김대중이 그 경력을 이용하고자 이들과 손을 잡기도 하였다. 두 사람 모두 1997년 대선에서 김대중을 지지했고, 박태준은 민주당계 정당과 공동정권을 꾸린 제3지대 정당(자유민주연합)에 입당했으며, 김중권은 민주당계 정당(새천년민주당)에 입당하여 2000년 총선에서 봉화군-울진군 선거구에서 불과 19표(득표율 0.04%p) 차이로 낙선하는 대선전을 거둔다. 이 시절의 향기가 남아있는 경상북도는 한 때, 민주당계 정당에 있어서 승부를 걸어보기에 대구보다도 더 좋은 지역으로 통했다. 
@@ -149,19 +155,21 @@
 가장 최근 선거인 2016년 총선과 2018년 지방선거에서, 이 ‘향기’가 대구 인근 지역과 구미에서 다시 피어오르기 시작했다. 이 내용은 ‘주목할 지역’ 내용에서 설명하도록 하겠다. 
 
 
-#### 주목할 지역
+- - -
 
-##### 대구 북구 을
+### 주목할 지역
 
-##### 대구 달서구 갑/을, 대구 달성군
+#### 대구 북구 을
 
-##### 경북 안동시
+#### 대구 달서구 갑/을, 대구 달성군
 
-##### 경북 구미시 갑/을
+#### 경북 안동시
 
-##### 경북 경산시, 경북 고령군-성주군-칠곡군
+#### 경북 구미시 갑/을
 
-### 경남권
+#### 경북 경산시, 경북 고령군-성주군-칠곡군
+
+## 경남권
 **경남권의 선거결과는 단순한 의석수 이상의 의미가 있다. (선거를 통한) 한국 사회와 정치지형의 변화는 보통 경남권에서 시작되었다.**
 
 경남권의 총선 결과는 한국의 민주주의적, 자유주의적, 사회주의적 변화를 선도하곤 했다. 한국전쟁 당시 임시수도의 경험, 국가가 주도한 중화학공업의 발달, 각기 다른 이야기를 가진 전국구 대선주자 정치인 3명(김영삼, 노무현, 권영길)이 탄생하는 과정 등이 모두 결합되어 가능한 일이었다. 역사적으로 민주당계 정당의 세가 압도적으로 강했던 서울, 그리고 역사적으로 보수주류 정당이나 지역구도에 따른 정당 지지세가 탄탄한 다른 지방들이 기존 한국의 중앙정치 구도를 탄탄히 받치고 있었다면, 그 구도가 근본적으로 갈아엎어지는 이른바 ‘정초선거’의 향방을 결정한 것은 경남권이었다. 
@@ -179,58 +187,60 @@
 
 
 
-#### 부산 서부(원도심, 서부산, 부산진권)
+### 부산 서부(원도심, 서부산, 부산진권)
 1950년대부터 부산은 야도(野都)였다. 야구의 도시이자, 이승만에 대항하던 야당인 민주당계 정당의 도시였다. 억척같이 살아야 했던 전쟁 피란민, 원도심과 서부산에 집중된 항만 및 섬유산업 노동자들이 이들의 주요 지지기반이었다. 60년대부터는 부산의 터줏대감 `김영삼(서구·동구: 1960~ 79, 88~ 92)`의 인기를 등에 업어 민주당계 정당이 꾸준히 과반의석을 차지하고, 특히 1980년대에는 국회 안팎에서 활동한 민주화운동 활동가가 김영삼의 신한민주당-통일민주당을 통해 민주당계 주요 정치인으로 재탄생하는 산실이 되었다. `서석재(서구·사하구: 1981~ 2000)`, `김정길(영도구: 1985~ 92)`, `노무현(동구: 1988~ 92)`이 대표적이다. 
 
 하지만 통일민주당이 3당 합당으로 보수주류 정당에 통합된 이후에는, 꾸준히 보수주류 정당의 중진을 배출하는 지역이 되었다. 서석재처럼 원래 민주당계 중진이면서 김영삼을 따르는 ‘민주계’, 또는 `김형오(영도구: 1992~ 2012)`, `정의화(중구-동구: 1996~ 2016)`, `김무성(남구·영도구: 1996~ 2020)`처럼 김영삼이 당권을 쥐던 시절에 중용된 인물들이 이 지역에 포진하였다. 합당 참여를 거부한 노무현과 김정길이 민주당계 정당의 부산 주요 정치인으로 전국적인 이름을 쌓긴 했지만, 이들은 정작 부산에서 다시는 당선되지 못했다. 그 와중에 국가안전기획부(현 국가정보원) 간부로서 고문수사 전력 의혹이 있던 `정형근(북구-강서구 갑: 1996~ 2008)`이 자리잡는 등, ‘야도’로서의 모습은 퇴색되었다. 
 
 2002년 노무현의 대통령 당선 이후, 부산 서부는 다시 민주당계 정당의 주요 공략지가 되었다. 김영삼계 정치인의 비서로 보수주류 정당을 경험한 `김영춘(부산진구 갑: 2016~ )`, 90년대부터 민주당으로 출마한 `조경태(사하구 을: 2004~ 2016 열린우리당/민주당, 2016~  새누리당)`, 노무현 행정부 청와대비서실을 통해 정계입문한 `문재인(사상구: 2012~ 16)` 등이 이 과정에서 당선되었다. 2016년 총선에서는 특히 전체 11석 중 4석을 민주당계 정당이 가져가면서 돌풍을 일으킨다.
 
-#### 부산 동부(동래, 동부산권)
+### 부산 동부(동래, 동부산권)
 부산 동부 역시 서부와 마찬가지로, 김영삼의 신한민주당-통일민주당의 강세가 1988년 총선까지 이어졌다. 여기에서 `이기택(동래구: 1971~ 79, 해운대구: 1985~ 92)`, `최형우(연제구: 1988~ 2000)` 등 훗날의 대권주자와, 훗날의 국회의장인 `박관용(동래구 갑: 1981~ 2004)`이 탄생했다. 김영삼이 3당 합당으로 보수주류 정당으로 합류한 이후의 행보도 비슷해서, 합류를 거부한 이후 부산으로 돌아오지 못한 이기택을 제외하면 모두들 보수주류 정당에서 ‘민주계’로 분류되며 정치생활을 이어갔다.
 
 2000년대 이후 새로이 개발되면서 인구(특히 외지인)가 많아진 해운대구와 기장군을 제외하면, 동래구, 금정구, 연제구, 수영구 등 나머지 부산 동부는 부산 평균보다 보수적 표심이 더 세다. 2004/2012년 총선에서 이 4개 구에서 보수주류 정당의 비례대표 득표율은 통상적으로 부산 평균 득표율보다 4~ 5%p 정도 높다. 그런데 이 표심은 ‘보수적이라고 볼 수도 있는’ 제3정당이 등장할 경우에는 그 쪽으로 이동하는 것으로 보인다. 친박연대와 국민의당이 존재했던 2008/2016년에는 부산 동부 6개 자치구·군에서 보수주류 정당의 정당득표율이 부산 평균과 비슷했는데, 같은 시기의 2008년 총선에서 친박연대의 정당득표율이 25% 이상인 부산의 자치구·군 6곳 중 5곳, 2016년 총선에서 국민의당 정당득표율이 20% 이상인 부산의 자치구·군 7곳 중 4곳이 부산 동부에 속했다. 
 
 정당투표에서의 작은 차이는 지역구 선거에서 매우 큰 차이로 드러낸다. 2008년 총선에서 부산 동부 6개 지역구 중 4곳에서 보수주류 정당(한나라당) 공천에서 탈락한 ‘친박 무소속 연대’ 또는 친박연대 후보가 승리했고, 2016년 총선 이후 보수정당이 분화하던 시점에서, `하태경(해운대구 갑: 2012~ )`과 `김세연(금정구: 2008~ 20)` 등 이름값 높은 인사를 포함하여, 7명의 지역구 의원 중 3명이 보수개혁 정당(바른정당)으로 이적한 원인 중에서도, 국민의당의 높은 지지율을 바라보며 지역구 의원들의 마음이 동요한 것이 있을 것이다.
 
-#### 울산광역시
+### 울산광역시
 한국 정치사에서 울산을 특별하게 만든 주인공은, 가장 강력한 노동조합으로 조직화된 제조업 노동자였다. 한국에서 제조업이 발달한 지역은 수도권이나이나 경북권에도 많지만, 회사별/지역별로 가장 큰 규모와 조직력을 갖추고 교섭하는 노동조합은 울산의 현대자동차/현대중공업 산하 노조다. 이들 공장이 위치한 울산 북구와 동구는 마치 대놓고 진보정당 지역구 국회의원 1명 만들어보라는 듯이, 전국에서 제조업 노동자가 가장 오밀조밀하게 몰려있는 지역이다. 덕분에 `조승수(울산 북구: 2004~ 05, 09~ 12)`, `김종훈(울산 동구: 2016~ )`, `윤종오(울산 북구: 2016~ 17)`를 비롯한 제조업 노동자 출신 진보정당(사민주의/민족주의 좌파) 국회의원이 꾸준히 등장했다. 물론 반대로, 현대그룹 사측을 대변하는 목소리도 매우 강력하다. 현대 가문이 창당한 통일국민당과 이를 흡수통합한 보수주류 정당을 통해, 현대그룹 수뇌부가 지속적으로 울산에 출마했다. 대표적으로 국회의원 7선 중 5선을 울산 동구에서 했던 `정몽준(울산 동구: 1988~ 08)` 현대중공업 회장이 있다. 
 
 하여 민주노동당이 창당한 2000년부터 울산에서는, 경상권 및 현대 사측이 밀어주는 보수주류 정당과, 제조업 노동자가 밀어주는 진보정당이 오랜 기간동안 거대양당으로 활동했다. 그 이전까지는 민주당계 정당 안의 노동 친화적인 후보들이 일부 두각을 나타내기도 했으나, 2000-10년대에 민주당계 정당은 후보를 내지 못하거나, 진보정당 노동자 후보에게 단일후보 자리를 양보하거나, 겨우 당선된 `강길부(울주군, 2004~ )`가 3년 만에 보수주류 정당으로 이적하는 등, 울산에서 제대로 자리잡지 못했다. 다만 2018년 지방선거와 함께 치러진 울산 북구 국회의원 재선거에서, 더불어민주당 이상헌 후보가 48.47%의 득표율로 당선되었다.
 
-#### 창원, 김해, 양산, 거제
+### 창원, 김해, 양산, 거제
 부산과 맞닿은 4개 도시에서도, 2000년대부터 두 가지 갈래에서 민주당계 정당과 사민주의 정당이 상대적으로 강세를 보인다. 첫 번째 갈래는 조선소, 기계공업 등 대형 중공업 공장 노동자를 통해 조직된 지지세이고, 두 번째 갈래는 김해 봉하마을 태생의 노무현이 중앙정계에 부상하며 생겨난 지지세이다. 2012년 총선 비례대표 정당투표의 지지율을 보면 두 갈래의 차이가 명확하게 보인다. `’마창진 통합’(2010년에 마산시, 창원시, 진해시가 통합되어 현재의 (통합)창원시가 출범했다. 현재의 창원시에서 마산회원구와 마산합포구가 구 마산시, 의창구와 성산구가 구 창원시, 진해구가 구 진해시 지역이었다.)` 이전의 구 창원과 거제에서는 사민주의 정당(통합진보당, 진보신당)의 득표율이 18% 대에 육박하지만, 민주당계 정당(민주통합당)의 득표율은 경남 평균인 25%를 크게 벗어나지 않았다. 반대로 김해와 양산에서 민주통합당 득표율은 35~ 40%대에 이르고, 사민주의 정당들은 모두 득표율 10% 미만으로 평균 이하를 기록했다. 
 
 두 지지층 모두 보수주류 정당에 대한 반감이 확실하기 때문에 지역구에서의 후보 단일화가 곧잘 이뤄져서 꽤 많은 승리를 거뒀다. 창원에서 사민주의 정당의 `권영길(창원시 을: 2004~ 12)`과 `노회찬(창원시 성산구: 2016~ 18)`, 김해에서 민주당계 정당의 `최철국(김해시 을: 2004~ 10)`과 `김경수(김해시 을: 2016~ 18)`처럼, 각 당에서 높은 이름값과 많은 역할을 부여받은 인물이 계속해서 당선되었다. 
 하지만 두 정당의 승리가 늘 쉽지는 않았다. 본디 `이주영(창원시 을: 2000~ 04, 마산시 갑·창원시 마산합포구: 2006~ )`, `김기춘(거제시: 1996~ 2008)`, `김태호(김해시 을: 2011~ 16)` 등의 보수주류 정당 중진이 꾸준히 배출되던 지역이기도 하다. 가장 최근의 2019년 창원시 성산구의 보궐선거에서, 민주당과 단일화에 성공한 사민주의 정당(여영국, 정의당)은 보수주류 정당(강기윤, 자유한국당)을 상대로 불과 504표, 0.54%p 차이로 간신히 승리했다. 
 
-#### 경남 북부-서부권
+### 경남 북부-서부권
 경남권의 나머지 지역과 비교했을 때, 이 곳의 표심은 경북, 특히 경북 북부권과 유사한 모습을 보여준다. 도시화나 공업 발달이 상대적으로 더딘 일반적인 농어촌 위주라는 점, 그리고 그 농어촌을 이어주는 도시는 경부축 교통망이 지나가지 않아서 타 지역과의 교류가 많지 않은 점에서 유사하다. 김영삼이 아직 보수주류 정당에 입당하지 않아 경남 전반에 민주당계 정당(통일민주당) 지지가 강하던 1988년 총선에서도, 경남 북부-서부권의 10석 중 8석에서 보수주류 정당(민주정의당)이 승리했으며, 이후에도 경남의 다른 지역과 다르게 민주당계 또는 사민주의 정당에 별다른 지지를 보내지 않았다. 오랫동안 한국 정치역사를 관찰한 사람들에게 매우 익숙한, 확고하게 우파를 대변하는 의정활동으로 유명한 정치인 - `김용갑(밀양시-창녕군: 1996~ 2008)`, `조해진(밀양시-창녕군: 2008~ 16)`, `여상규(사천시-남해군-하동군: 2008~ 20)` - 과 심각한 물의(성추행, 선관위 DDoS 공격 등)를 일으킨 것으로 중앙언론의 관심을 탔던 정치인 - `박희태(남해군-하동군: 1988~ 2008, 양산시: 2009~ 12)`, `최구식(진주시 갑: 2004~ 12)` - 의 이름이 이 권역에서 발견된다.
 
 아이러니하게, 이러한 표심이 2008년 총선에서 사민주의 정당 국회의원 한 명을 탄생시켰다. 그 주인공은 농민운동가로 정치에 입문해 사민주의 정당(민주노동당-통합진보당-정의당) 당대표까지 맡은 `강기갑(사천시: 2008~ 12)`이었다. 당시 보수주류 정당(한나라당)에서는 친이계(친-이명박계)면서 당 사무총장을 맡고 있던 `이방호(사천시: 2000~ 08)`가 출마했으나, 그보다 더욱 보수적인 표심을 가진 친박계(친-박근혜계) 지지자들은 친이계의 힘을 떨어뜨리려는 목적으로, 오로지 ‘이방호를 떨어뜨리기 위해’ 강기갑에게 투표하는 집단행동을 보여주면서 강기갑이 당선된 것이었다. 
 
 
-#### 주목할 지역
+- - -
 
-##### 부산 중구-영도구
+### 주목할 지역
 
-##### 부산 부산진구 갑
+#### 부산 중구-영도구
 
-##### 부산 사하구 갑/을
+#### 부산 부산진구 갑
 
-##### 부산 금정구
+#### 부산 사하구 갑/을
 
-##### 부산 연제구 (더민주로 보내?)
+#### 부산 금정구
 
-##### 부산 사상구
+#### 부산 연제구 (더민주로 보내?)
 
-##### 울산 울주군
+#### 부산 사상구
 
-##### 경남 창원시 마산회원구, 양산시 을
+#### 울산 울주군
 
-##### 경남 사천시-남해군-하동군 
+#### 경남 창원시 마산회원구, 양산시 을
 
-##### 경남 거제시
+#### 경남 사천시-남해군-하동군 
+
+#### 경남 거제시
 
 
 
