--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -88,7 +88,7 @@
 - - -
 
 #### 서울 서대문구 갑, 전남 목포시
-**더불어민주당 우상호, 국민의당-민주평화당 박지원**
+**더불어민주당 우상호, 국민의당-민생당 박지원**
 박근혜 대통령의 탄핵 과정에서 가장 피말리던 순간은, 국회가 탄핵소추를 의결하는 투표 과정이었다. 당시 야3당의 의석수는 의결정족수인 200명보다 적었으므로, 야당 의원들의 결속이 풀어지지 않도록 단속하는 동시에 집권당(새누리당) 소속 의원들이 ‘용기를 가지고’ 탄핵에 찬성하도록 조심스럽게 판을 깔 필요가 있었다. 이 과정에서 각당 원내대표였던 우상호(더불어민주당), 박지원(국민의당), 노회찬(정의당, 2018년 사망)의 치밀한 공조가 이뤄졌다. 그들은 탄핵의결 절차와 일정에 대해 각당마다 다른 의견이 나오는 것을 조율하고, 새누리당 내의 분위기와 국회 바깥 탄핵촛불집회의 분위기를 보아가며 최대한 많은 찬성표가 나올 타이밍을 쟀다. 그 결과 새누리당 안에서도 최소 60여 명의 의원이 탄핵에 찬성하여, 도저히 불가능해보였던 탄핵소추 및 심판 과정이 원활하게 진행될 수 있었다. 세 원내대표의 광장의 거센 요구와 국회 안의 치열한 정치협상을 모두 충족할 수 있었기에 가능했다.
 
 #### 인천 부평구 을, 경기 고양시 갑
@@ -96,7 +96,7 @@
 
 
 #### 서울 동작구 을, 경기 안양시 동안구 을
-**미래통합당 나경원, 미래통합당 심재철**
+**미래통합당 나경원, 심재철**
 
 
 
@@ -121,11 +121,14 @@
 
 - - -
 
-#### 서울 은평구 갑, 경기 수원시 을: 박주민, 백혜련
+#### 서울 은평구 갑, 경기 수원시 을
+**더불어민주당 박주민, 백혜련**
 
-#### 서울 강서구 을: 금태섭
+#### 서울 강서구 을
+**더불어민주당 금태섭**
 
-#### 광주 광산구 을: 권은희
+#### 광주 광산구 을
+**국민의당-무소속 권은희**
 
 
 ## 행정부 운영, 예산 및 경제 관련
@@ -194,16 +197,20 @@
 
 - - -
 
-#### 서울 양천구 갑: 김용태
+#### 서울 관악구 갑, 대구 동구 을
+**국민의당-무소속 김성식, 미래한국당 유승민**
 
-#### 서울 관악구 갑, 대구 동구 을: 김성식, 유승민
 김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 `한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)`정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 `유수호(유수호는 1988~ 96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)`가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
 
-#### 경기 고양시 갑: 심상정
+#### 경기 고양시 갑
+**정의당 심상정**
 
-#### 대구 수성구 을: 김부겸
+#### 대구 수성구 을
+**더불어민주당 김부겸**
+
 김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~ 19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
 
-#### 경남 사천시-남해군-하동군: 제윤경
+#### 경남 사천시-남해군-하동군
+**더불어민주당 제윤경**
 
 
