--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -30,6 +30,20 @@
 
 - - -
 
+#### 서울 강동구 갑, 경기 용인시 병
+**더불어민주당 진선미, 더불어민주당 정춘숙**
+
+#### 서울 강서구 병, 서울 영등포구 갑
+**더불어민주당 한정애, 더불어민주당 김영주**
+
+#### 경북 상주군-군위군-의성군-청송군
+**미래통합당 임이자**
+
+#### 인천 연수구 을
+**정의당 이정미**
+
+#### 인천 미추홀구 갑, 충북 청주시 청원구
+**미래통합당 신보라, 국민의당-미래통합당 김수민**
 
 
 
@@ -74,9 +88,17 @@
 
 - - -
 
-#### 서울 강동구 갑: 진선미
+#### 서울 동작구 갑
+**더불어민주당 김병기**
 
-#### 광주 광산구 을: 권은희
+#### 서울 강동구 갑
+**더불어민주당 진선미**
+
+#### 충북 청주시 상당구
+**정의당 김종대**
+
+#### 경기 평택시 갑, 인천 미추홀구 을
+**미래통합당 원유철, 미래통합당-무소속 윤상현**
 
 
 
@@ -108,6 +130,26 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 - - -
+
+#### 서울 강북구 갑
+**더불어민주당 박용진**
+
+#### 서울 서초구 을, 대전 유성구 을
+**더불어민주당 박경미, 국민의당-미래통합당 신용현**
+
+#### 인천 미추홀구 갑
+**미래통합당 전희경**
+
+#### 경기 고양시 병, 충북 청주시 흥덕구
+**더불어민주당 유은혜, 도종환**
+
+#### 경남 창원시 성산구
+**정의당 여영국**
+
+#### 경기 오산시
+**더불어민주당 안민석**
+
+
 
 
 
