--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -47,10 +47,8 @@
 
 #### 대전 유성구 갑/을
 
-#### 충북 청주시 상당구, 충북 보은군-옥천군-영동군-괴산군
 
-
-#### 충북 제천시-단양군
+#### 충북 제천시-단양군, 충남 천안시 갑
 
 
 #### 충남 논산시-계룡시-금산군
@@ -107,9 +105,8 @@
 
 #### 전남 목포시
 
-#### 전남 순천시
+#### 전북 전주시 을, 전남 순천시
 
-#### 
 
 ## 제주특별자치도
 **’뭍’과 분리된 제주도의 특수한 사회환경, 그로 인해 벌어진 아픈 역사. 전국에서 가장 진보적인 목소리를 내는 제주도의 표심을 이해하는 키워드이다.**
@@ -159,11 +156,9 @@
 
 ### 주목할 지역
 
-#### 대구 북구 을
+#### 대구 북구 을, 동구 을
 
-#### 대구 달서구 갑/을, 대구 달성군
-
-#### 경북 안동시
+#### 경북 포항시 북구
 
 #### 경북 구미시 갑/을
 
@@ -222,13 +217,9 @@
 
 ### 주목할 지역
 
-#### 부산 중구-영도구
+#### 부산 중구-영도구, 금정구
 
 #### 부산 부산진구 갑
-
-#### 부산 사하구 갑/을
-
-#### 부산 금정구
 
 #### 부산 연제구 (더민주로 보내?)
 
@@ -236,9 +227,9 @@
 
 #### 울산 울주군
 
-#### 경남 창원시 마산회원구, 양산시 을
+#### 경남 창원시 성산구
 
-#### 경남 사천시-남해군-하동군 
+#### 경남 창원시 마산회원구, 양산시 을
 
 #### 경남 거제시
 
