--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -70,7 +70,7 @@
 사실, 이념에 따른 정당구도가 자리잡은 이후 종로보다도 전국구로 좀 더 주목받은 지역구가 따로 있다. 2004년에 처음 설치된 노원구 병으로, 이 곳에서는 전국구 인물이 계속 당선되었다. 04년에 민주당계 정당의 4선 중진(임채정: 열린우리당), 08년에 보수주류 정당의 소장파로 알려진 언론사 사장 출신의 젊은 초선(홍정욱: 한나라당), 12년에 서울 최초의 사민주의 정당 의원(노회찬: 통합진보당-정의당), 14년(보궐선거)과 16년에 제3정당의 유력 대선후보(안철수: 무소속/국민의당)가 이 곳에서 선출되었다. 이 시기의 주요 낙선자로는 노회찬 공동대표(진보신당: 2008), 허준영 전 코레일 사장(새누리당: 2012), 이준석 최고위원(새누리당: 2016, 바른미래당: 2018)이 있는데, 이들은 선거 당시에 이미 전국구 인물이라고 평가받았다. 
 2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~ 18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 “상계동”이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
 
-<!--#### 서울 마포구 을-->
+#### 서울 마포구 을
 
 #### 서울 양천구 을, 강서구 을, 구로구 을
 **자유한국당 서울시당 최후의 보루**
@@ -84,6 +84,8 @@
 2000~ 12년의 4번의 총선에서, 보수주류 정당은 관악구 을에서 0번, 갑에서 1번만 승리한다. 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져 민주당계 정당의 지지세가 매우 강하다. 같은 이유로 사민주의 정당의 지역조직도 탄탄하다. 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 5%를 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당). 
 그러나 관악구 갑·을의 현재 국회의원인 김성식(p.000 참조)과 오신환은 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 2016년 총선에서 두 후보의 당선은 나름의 파란이었다. 김성식은 안철수와 함께 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원었고, 오신환은 지역구 사상 첫 보수주류 정당(새누리당) 의원이 재선까지 성공한 경우였다. 두 의원은 2019년 바른미래당 원내대표 선거에서 맞붙을 정도로, 당내외에서 두루 인정받는 중견 정치인이 되었다. 
 관악구는 이처럼 거대양당 뿐만 아니라 3~ 4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
+
+#### 서울 강남구 갑, 송파구 병
 
 <!--
 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론의 중심지, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져서, 민주당계 정당 뿐만 아니라 사민주의 정당의 지역조직이 다른 지역구에 비해서 매우 강하다. 2000~ 2012년 사이의 4번의 총선에서, 보수주류 정당은 관악구 갑에서 1번 승리하고, 을에서는 한 번도 당선되지 못한다. 한편 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 자력으로 5%가 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당).  
@@ -156,7 +158,6 @@
 
 
 ### 주목할 지역
-#### 인천 남동구 갑/을
 
 #### 인천 연수구 을
 
@@ -167,18 +168,18 @@
 #### 경기 성남시 분당구 갑/을
 
 
-#### 경기 의정부시 갑/을
+#### 경기 용인시 정, 남양주시 갑
 
 
-#### 경기 안양시 만안구 / 동안구 갑/을
+<!--#### 경기 안양시 만안구, 동안구 갑/을-->
+
+#### 경기 의정부시 갑, 안양시 만안구
+
+
+#### 경기 평택시 갑, 용인시 병
 
 
 #### 경기 의왕시-과천시
-
-
-#### 
-
-
 
 
 
