--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -12,7 +12,7 @@
 ### 보건복지위원회(복지위) #1
 보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다. 복리후생과 관련하여 정부가 직접 자본, 인력, 시설 등의 투자를 도맡아야 하는 분야가 다 몰려있다. 
 
-그런 점에서 복지위는 자본주의와 사회주의적 관점에서 정치적, 경제적, 사회적 철학이 정면으로 맞서는 배틀그라운드가 된다. 개인의 권리와 복리후생을 지키는 데에 반드시 자원투자가 필요한 사업에서, '국가와 사회의 역할이 어디까지인가? 개인이 감당할 영역은 어디까지인가?' '개인의 자원을 개인이 필요할 때 알아서 쓰게 할 것인가? 개인의 자원을 조금씩 모아 사회 공동체 차원에서 대응하게 할 것인가?' 이렇게 두 가지 질문이 충돌하기 때문이다. 예를 들어보자. 개인이 원하는 만큼 돈을 들여서 본인이 원하는 고급 의료진과 고급 의료시설을 직접 선택할 수 있는 체계를 만들 것인가? 아니면 평균 수준의 의료시설을 의료보험을 통해 모든 사람들이 값싼 비용으로 이용할 수 있는 체계를 만들 것인가? 둘 다 하면 좋겠지만, 자본과 인력이 제한된 상태에서 한 쪽을 택하면 다른 한 쪽이 축소될 수 밖에 없다. `모두 조금씩 세금을 더 내서 자원을 늘리기 전까지는(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)` 이 중 하나의 방향성을 정해야 한다. 
+그런 점에서 복지위는 자본주의와 사회주의적 관점에서 정치적, 경제적, 사회적 철학이 정면으로 맞서는 배틀그라운드가 된다. 개인의 권리와 복리후생을 지키는 데에 반드시 자원투자가 필요한 사업에서, '국가와 사회의 역할이 어디까지인가? 개인이 감당할 영역은 어디까지인가?' '개인의 자원을 개인이 필요할 때 알아서 쓰게 할 것인가? 개인의 자원을 조금씩 모아 사회 공동체 차원에서 대응하게 할 것인가?' 이렇게 두 가지 질문이 충돌하기 때문이다. 예를 들어보자. 개인이 원하는 만큼 돈을 들여서 본인이 원하는 고급 의료진과 고급 의료시설을 직접 선택할 수 있는 체계를 만들 것인가? 아니면 평균 수준의 의료시설을 의료보험을 통해 모든 사람들이 값싼 비용으로 이용할 수 있는 체계를 만들 것인가? 둘 다 하면 좋겠지만, 자본과 인력이 제한된 상태에서 한 쪽을 택하면 다른 한 쪽이 축소될 수 밖에 없다. `모두 조금씩 세금을 더 내서 자원을 늘리기 전까지는(3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고)` 이 중 하나의 방향성을 정해야 한다. 
 
 ### 환경노동위원회(환노위) #1
 환경노동위원회는 그 중요성에 비해 국회에서 찬밥 신세를 면치 못하고 있다. 모든 시민은 곧 일하는 노동자이고, 또한 같은 자연환경을 공유하며 살아가는 생명체이다. 따라서 노동문제와 환경문제는 곧 모든 시민의 권리보장과 복리후생 수준을 결정하게 된다. 하지만 그런 중요한 문제를 처리하는 환노위는 국회 상임위원회 중에서 정보위원회 다음으로 가장 작은 규모(최대 정원 16명)를 가지고 있으며, 그나마도 전혀 다른 분야의 전문성이 필요한 환경과 노동문제를 동시에 다루므로 격무에 시달리고 꼼꼼하게 논의하기 어렵게 된다. 환노위를 통해 드러나는 문제들은 노동 및 환경문제 중에서도 가장 심각한 일부 사례에 불과할 수 있다.
@@ -42,8 +42,12 @@
 #### 인천 연수구 을
 **정의당 이정미**
 
+사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자의 
+
 #### 인천 미추홀구 갑, 충북 청주시 청원구
 **미래통합당 신보라, 국민의당-미래통합당 김수민**
+
+국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원이다. 신보라는 오래된 
 
 
 
@@ -88,19 +92,19 @@
 
 - - -
 
-#### 서울 동작구 갑
-**더불어민주당 김병기**
+#### 서울 동작구 갑, 충북 청주시 상당구
+**더불어민주당 김병기, 정의당 김종대**
+
+민주당계 정당과 사민주의 정당이 왠지 모르게 '외교안보에 관심이 없다'는 평가를 받다보니, 두 정당에서도 이를 해소할 수 있는 인물을 원하기 마련이다. 국가정보원 인사처장 출신의 김병기, 국방장관 정책보좌관 출신의 김종대는 이런 점을 바탕으로 2016년 총선을 앞두고 각 당에 영입되었다. 
 
 #### 서울 강동구 갑
 **더불어민주당 진선미**
 
-#### 충북 청주시 상당구
-**정의당 김종대**
 
 #### 경기 평택시 갑, 인천 미추홀구 을
 **미래통합당 원유철, 미래통합당-무소속 윤상현**
 
-
+오랫동안 활동한 국회의원은 자신의 발언에 따라 외교적인 
 
 
 
@@ -134,17 +138,31 @@
 #### 서울 강북구 갑
 **더불어민주당 박용진**
 
-#### 서울 서초구 을, 대전 유성구 을
-**더불어민주당 박경미, 국민의당-미래통합당 신용현**
+입법활동만 놓고 보면, 2016-2020 국회에서 가장 주목받은 인물이 박용진이다. 시민단체 <정치하는 엄마들>과의 협업으로 국가지원금을 사적으로 사용하거나 횡령하고 유치원 운영은 제대로 하지 않은 사립유치원의 명단을 폭로하고, 이를 예방하기 위한 소위 `"유치원 3법"(교육부와 지방교육청이 유치원의 회계관리를 투명하게 살펴보고, 유치원 내 급식을 학교처럼 엄격하게 관리감독할 수 있도록 하는 <유아교육법>, <사립학교법>, <학교급식법> 개정안)`을 대표발의했으며, 결국 임재훈(국민의당-미래통합당) 의원의 유치원 3법 중재안이 신속처리안건으로 지정되어 통과할 수 있도록 유도했다. 
+
+박용진은 이 과정에서 사립유치원의 비리운영문제를 중앙정치의 주요 이슈로 끌어올리고 효과적인 전국적 여론전을 펼쳤다. 사립유치원 경영자들은 지역구 내부의 여론을 좌지우지하여 국회의원을 낙선시킬 힘이 있다고 여겨졌는데, 이를 
+정면으로 되받아치는 데 성공한 것이다.
 
 #### 인천 미추홀구 갑
 **미래통합당 전희경**
+
+#### 서울 서초구 을, 대전 유성구 을
+**더불어민주당 박경미, 국민의당-미래통합당 신용현**
+
+언젠가부터 기성 정당에서는 여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습이 자리잡았다. 수학교육학 교수였던 박경미, 한국표준과학연구원장을 역임한 신용현은 2016년 총선에서 각각 더불어민주당, 국민의당의 비례대표 순번 1번으로 당선되었다. 각 정당은 이공계를 중시한다는 상징으로 이들을 선거기간동안 내세우기도 했으며, 이들 국회의원 역시 (상임위원회를 2년 간격으로 바꾸는 보통의 경우와 달리) 각각 교문위와 과방위에서 4년을 꼬박 활동하였다. 
+
+이들은 2020년에 자신의 직업군과 일치하는 '험지'로 출마할 것으로 보인다. 두 인물은 2018년부터 더불어민주당 서초(을), 바른미래당 유성(을) 지역위원장을 역임했다. 수학 (사)교육에 관심이 많은 지역과 자연과학 연구자가 많은 지역을 타겟으로 잡은 듯 보인다. 서초구 을에서 민주당계 정당이 당선된 것은 1988년이 마지막(김덕룡, 통일민주당)이었고, 유성구가 설치된 1988년 이후 보수주류 정당은 유성구에서 승리한 적이 없다. 
+
+
+
 
 #### 경기 고양시 병, 충북 청주시 흥덕구
 **더불어민주당 유은혜, 도종환**
 
 #### 경남 창원시 성산구
 **정의당 여영국**
+
+2019년 보궐선거에서 당선된 여영국
 
 #### 경기 오산시
 **더불어민주당 안민석**
@@ -170,7 +188,7 @@
 ### 국토교통위원회(국토위)
 국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육로/항공 교통시설 관리업무이다. 
 
-지역구 국회의원들은 국토위에 배정되기를 선호하는 경우가 매우 많다. 아무래도 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 가장 
+많은 지역구 국회의원들이 국토위에 배정되기를 선호한다. 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 유리하기 때문이다. 
 
 
 - - -
@@ -178,3 +196,24 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 - - -
+
+#### 부산 서구-동구?
+**미래통합당 송희경**
+
+
+새누리당 송희경(p. XXX 참조) 뿐만 아니라, 
+
+#### 경기 고양시 정
+**더불어민주당 김현미, 미래통합당 김현아**
+
+#### 전북 전주시 병
+**민생당 정동영**
+
+의외로 4선 의원 정동영은
+
+#### 전남 담양군-함평군-영광군-장성군
+**더불어민주당 이개호**
+
+#### 전북 군산시, 울산 동구
+**국민의당-무소속 김관영, 민중당 김종훈**
+
