--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -123,11 +123,11 @@
 
 수원은 조선 정조 대에 ‘신도시’로 조성된 전통있는 도시로, 1988년 총선부터 4번 연속으로 보수주류 또는 보수적인 충청권 제3정당에서만 당선자를 배출했다. 그 중심에는 부자가 함께 7선을 기록한 `남평우(수원시 팔달구: 1992~ 98)`와 `남경필(수원시 팔달구: 2000~ 14)`이 있었다. 2004년부터 민주당계 당선인이 대거 탄생하지만, 그 중심에는 당내에서 우파적 경제사회 정책을 추진한 것으로 유명한 `김진표(수원시 영통구: 2004~ 14, 16~ )`가 자리잡고 있다. 
 
-성남은 중앙정부가 서울의 철거민을 수용하기 위해 1960년대에 개발한 원도심과 90년대의 부촌 신도시가 공존하는데, 신도시 건설 완료 후인 1992년 총선부터 4번 연속으로 원도심(수정구/중원구)과 신도시(분당구)를 각각 민주당계와 보수주류 정당이 독차지했다. `고흥길(성남시 분당구 갑: 2000~ 12)`과 `임태희(성남시 분당구 을: 2000~ 11)`는 분당에서 3선을 기록한 중량감을 바탕으로 이명박 행정부에서 장관직을 맡았는데, 그 반대편의 원도심에서는 민주당계 3선 중진(`김태넌(성남시 수정구: 2004~ 08, 12~ )`)과 사민주의 정당 지역구의원(`김미희(성남시 중원구: 2012~ 15)`)이 등장하기도 했다. 
+성남은 중앙정부가 서울의 철거민을 수용하기 위해 1960년대에 개발한 원도심과 90년대의 부촌 신도시가 공존하는데, 신도시 건설 완료 후인 1992년 총선부터 4번 연속으로 원도심(수정구/중원구)과 신도시(분당구)를 각각 민주당계와 보수주류 정당이 독차지했다. `고흥길(성남시 분당구 갑: 2000~ 12)`과 `임태희(성남시 분당구 을: 2000~ 11)`는 분당에서 3선을 기록한 중량감을 바탕으로 이명박 행정부에서 장관직을 맡았는데, 그 반대편의 원도심에서는 민주당계 3선 중진(`김태년(성남시 수정구: 2004~ 08, 12~ )`)과 사민주의 정당 지역구의원(`김미희(성남시 중원구: 2012~ 15)`)이 등장하기도 했다. 
 
-고양은 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 늦게 성장했다. 고양군 시절에는 보수주류 정당의 안정적 지지세가 유지되었으나 2000년 총선부터 서울에 출퇴근하는 중산층 유권자를 중심으로 민주당계 및 사민주의 정당에 대한 지지세로 완전히 돌아선다. 대선주자급 정치인인 `심상정(고양시 덕양구 갑: 2012~ )`, `유시민(고양시 덕양구 갑: 2003~ 08)`, `(고양시 일산구 갑: 2004~ 08)`, `최성(고양시 덕양구 을: 2004~ 08)`이 자리잡았고, ‘중산층 신도시 중진’의 무게감을 바탕으로 문재인 행정부의 장관직을 맡은 `유은혜(고양시 일산동구: 2012~ 20)`, `김현미(고양시 일산서구: 2012~ 20)`가 자리잡았다.
+고양은 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 늦게 성장했다. 고양군 시절에는 보수주류 정당의 안정적 지지세가 유지되었으나 2000년 총선부터 서울에 출퇴근하는 중산층 유권자를 중심으로 민주당계 및 사민주의 정당에 대한 지지세로 완전히 돌아선다. 대선주자급 정치인인 `심상정(고양시 덕양구 갑: 2012~ )`, `유시민(고양시 덕양구 갑: 2003~ 08)`, `한명숙(고양시 일산구 갑: 2004~ 08)`, `최성(고양시 덕양구 을: 2004~ 08)`이 자리잡았고, ‘중산층 신도시 중진’의 무게감을 바탕으로 문재인 행정부의 장관직을 맡은 `유은혜(고양시 일산동구: 2012~ 20)`, `김현미(고양시 일산서구: 2012~ 20)`가 자리잡았다.
 
-다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 손학규(성남시 분당구 을: 2011~ 12)가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당”으로 자리잡는 과정일 수도 있다. 
+다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 `손학규(성남시 분당구 을: 2011~ 12)`가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당”으로 자리잡는 과정일 수도 있다. 
 
 ### 서울 서남부 인접 위성도시
 지금 이 파트에서 설명하는 “서울 서남부 인접 위성도시”는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이 된다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
@@ -142,7 +142,7 @@
 특이하게, 경기 서남부는 여타 수도권 지역에 비해 제3정당(보수계열 또는 민주당 계열)이 많이 지지받는다. 1996년의 자유민주연합(충청권 제3정당)과 통합민주당(민주당계 소수정당)은 각각 2석과 1석을 얻었고, 무소속으로 당선된 초선의원 원유철은 1997년 대선을 앞두고 이인제가 창당한 국민신당으로 이적한 바 있다. 2008년에는 경상권 바깥에서 유일한 친박연대(보수계열 소수정당) 당선인(홍장표: 안산시 상록구 을)을 배출했으며, 2016년 총선에는 안산의 두 현역의원(김영환, 부좌현)과 과거 중진의원(천정배: 광주광역시 서구 을 출마)이 국민의당(민주당계 소수정당)으로 이적해 출마하기도 했다. 당시 국민의당은 (비록 모두 낙선하긴 했지만) 경기 서남부의 12개 지역구 중 8곳에서 지역구 후보 득표율이 20%를 넘었다. 나머지 경기도 48개 지역구에서는 5곳에 불과했던 것과 비교된다. 2020년 현재의 현역의원 중에서도, 보수주류 정당을 나와서 보수개혁 정당에 몸담았거나(박순자, 안산시 단원구 을) 계속 몸담고 있는(유의동, 평택시 을) 경우가 있다. 
 
 ### 경기 북부, 동남부 외곽지역
-수도권이긴 하지만 서울에서 멀리 떨어진 외곽. 북한과 마주한 최전방. 농촌의 보수적인 표심과 반공안보에 민감한 보수적인 표심이 더해져서, 경기도 외곽은 이승만 행정부 시절부터 보수주류 정당을 강력하게 지지하는 표심이 자리잡게 되었다. 공교롭게도 이 지역에서 보수주류 정당 출신으로 독재정권 몰락의 상징과 같은 전국구 정치인이 셋이나 당선된 적이 있다. 이승만 행정부가 1960년 3·15 부정선거를 감행한 원인을 제공한 당시 부통령 후보 이기붕(이천군: 1958~ 60), 이를 실무적으로 지시하고 집행한 내무장관 최인규(광주군: 1958~ 60), 박정희 행정부의 대통령경호실장으로 월권을 휘두르다가 박정희와 함께 김재규에게 사망한 차지철(광주군-이천군: 1967~ 74)까지. 이기붕의 경우 원래 자신의 고향이던 이천에서 출마를 준비하던, 친정권 정치깡패 보스인 이정재를 반강제로 쫓아내고 공천을 받아 단독후보로 당선된 인물이기도 했다.
+수도권이긴 하지만 서울에서 멀리 떨어진 외곽. 북한과 마주한 최전방. 농촌의 보수적인 표심과 반공안보에 민감한 보수적인 표심이 더해져서, 경기도 외곽은 이승만 행정부 시절부터 보수주류 정당을 강력하게 지지하는 표심이 자리잡게 되었다. 공교롭게도 이 지역에서 보수주류 정당 출신으로 독재정권 몰락의 상징과 같은 전국구 정치인이 셋이나 당선된 적이 있다. 이승만 행정부가 1960년 3·15 부정선거를 감행한 원인을 제공한 당시 부통령 후보 `이기붕(이천군: 1958~ 60)`, 이를 실무적으로 지시하고 집행한 내무장관 `최인규(광주군: 1958~ 60)`, 박정희 행정부의 대통령경호실장으로 월권을 휘두르다가 박정희와 함께 김재규에게 사망한 `차지철(광주군-이천군: 1967~ 74)`까지. 이기붕의 경우 원래 자신의 고향이던 이천에서 출마를 준비하던, 친정권 정치깡패 보스인 이정재를 반강제로 쫓아내고 공천을 받아 단독후보로 당선된 인물이기도 했다.
 
 아무튼 민주화 이후 시대로 넘어와서, 이 지역에서 계속해서 보수주류 정당 중진이 탄생했지만 그 성격이 다들 다르며, 특이하다. `이한동(포천군-연천군: 1981~2004)`처럼 전두환 행정부 시절부터 보수주류 정당에 몸담았지만 충청권 보수계열 제3정당(자유민주연합)으로 이적하고 김대중 행정부의 국무총리를 맡은 경우가 있는가 하면, `정병국(여주군-양평군-가평군: 2000~ )`처럼 민주화 학생운동에 참여하다가 김영삼에 의해 발탁되어 보수주류 정당에 몸담은 경우가 있다. 또 `이규택(여주군: 1992~2008)`처럼 민주당계 정치인으로 출발하였다가 김대중을 반대하며 보수주류로 돌아서서 현재는 친박계 극우정당(친박신당)에서 활동하는 경우가 있다. 분명 보수주류 정당의 주요 중진이지만 당을 이끈다기 보다는 당내의 일반적인 흐름과 다르게 행동하는, 특이한 경우들이다.
 
