--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -4,9 +4,9 @@
 
 ### 위원회와 본회의
 국회에서 어떤 사안을 논의하는 회의는 크게 3가지 종류로 나뉜다.
-	- 본회의: 뉴스에 흔히 나오는, 국회의원 300명 전원이 큰 홀(본회의장)에 모여서 진행하는 회의. 
-	- 위원회: 행정부 업무 중 특정한 분야를 전문적으로 담당하는 회의. 위원회마다 12~ 30명의 국회의원으로 구성된다. 
-	- 소위원회: 위원회 안에서 세부적으로 특정한 분야를 전문적으로 담당하는 회의. 소위원회마다 4~ 12인의 국회의원으로 구성된다.
+- 본회의: 뉴스에 흔히 나오는, 국회의원 300명 전원이 큰 홀(본회의장)에 모여서 진행하는 회의. 
+- 위원회: 행정부 업무 중 특정한 분야를 전문적으로 담당하는 회의. 위원회마다 12~ 30명의 국회의원으로 구성된다. 
+- 소위원회: 위원회 안에서 세부적으로 특정한 분야를 전문적으로 담당하는 회의. 소위원회마다 4~ 12인의 국회의원으로 구성된다.
 
 예를 들어보자. 소득세 세율을 바꾸는 법안이 발의되면, 이 법안의 심사작업은 조세제도를 담당하는 기획재정위원회에 배정된다. 기획재정위원회(기재위, 26인)의 조세소위원회(13인)에서 법안을 1차로 심사하고, 여기서 논의한 내용을 기재위 전체회의에서 2차로 심사한 뒤, 기재위를 통과하면 본회의 안건으로 상정된다. 비슷하게, 질병관리본부 운영예산을 증가시키는 안건이 발의되면, 질병관리본부를 담당하는 보건복지위원회(22인)의 예산결산심사소위원회(10인)부터 심사를 시작하여 두 차례의 심사 후 본회의까지 올라간다. 
 
@@ -18,28 +18,28 @@
 상임위원회는 행정부의 특정 기관을 도맡아서 상시 열리는 위원회다. 예를 들어 국회 국방위원회는 국방부 소관업무를, 보건복지위원회는 보건복지부 소관업무를 담당하는 식이다. 국회의원 임기는 4년이지만 상임위는 2년에 한 번씩(상반기 국회, 하반기 국회) 재구성하므로, 국회의원은 4년의 임기 동안 자신이 일할 상임위 한 곳을 선택할 2번의 기회를 가진다. 다만 <국회법>에 의해 각 상임위원회 정원이 정해져 있으므로 항상 본인이 원하는 상임위에 배정되는 것은 아니다. 
 
 2020년 3월 현재 한국 국회에는 다음의 17개 상임위원회가 있다. 순서는 <국회법>의 규정에서 나열하는 순서를 따른다. 별표(*)된 상임위는 '겸임 상임위원회'로, 나머지 다른 상임위와 겸임할 수 있도록 허용되어있다. 
-	- *국회운영위원회 (국회의원 정원 28명)
-	- 법제사법위원회 (18명)
-	- 정무위원회 (24명)
-	- 기획재정위원회 (26명)
-	- 교육위원회 (16명)
-	- 과학기술정보방송통신위원회 (21명)
-	- 외교통일위원회 (22명)
-	- 국방위원회 (17명)
-	- 행정안전위원회 (22명)
-	- 문화체육관광위원회 (17명)
-	- 농림축산식품해양수산위원회 (19명)
-	- 산업자원통상중소벤쳐기업위원회 (29명)
-	- 보건복지위원회 (22명)
-	- 환경노동위원회 (16명)
-	- 국토교통위원회 (30명)
-	- *정보위원회 (12명)
-	- *여성가족위원회 (17명)
+- *국회운영위원회 (국회의원 정원 28명)
+- 법제사법위원회 (18명)
+- 정무위원회 (24명)
+- 기획재정위원회 (26명)
+- 교육위원회 (16명)
+- 과학기술정보방송통신위원회 (21명)
+- 외교통일위원회 (22명)
+- 국방위원회 (17명)
+- 행정안전위원회 (22명)
+- 문화체육관광위원회 (17명)
+- 농림축산식품해양수산위원회 (19명)
+- 산업자원통상중소벤쳐기업위원회 (29명)
+- 보건복지위원회 (22명)
+- 환경노동위원회 (16명)
+- 국토교통위원회 (30명)
+- *정보위원회 (12명)
+- *여성가족위원회 (17명)
 
 특별위원회는 특별히 논의가 필요한 이슈가 있을 때 일시적으로 운영하는 위원회이다. 2016-2020 국회에서 만들어진 특별위원회 몇몇 개의 이름을 살펴보면 그 성격을 알 수 있다. '대법원장(김명수)임명동의에관한인사청문특별위원회', '저출산·고령화대책특별위원회', '미세먼지대책특별위원회', '헌법개정특별위원회', '평창동계올림픽및국제경기대회지원특별위원회' 등. 다만 예산결산특별위원회는 매년 중앙정부 예산 전체를 심사하고 결산해야 하므로, <국회법> 규정을 통해 상설운영된다. <전국투표전도 2020>에서는 2016-2020 국회에서 특별히 주목받은 특별위원회들의 역할을 소개한다. 
-	- 예산결산특별위원회 (50명)
-	- 정치개혁특별위원회 (2017. 08. 21 ~ 2019. 08. 29, 19명)
-	- 사법개혁특별위원회 (2018. 01. 12 ~ 2019. 08. 23, 16명)
+- 예산결산특별위원회 (50명)
+- 정치개혁특별위원회 (2017. 08. 21 ~ 2019. 08. 29, 19명)
+- 사법개혁특별위원회 (2018. 01. 12 ~ 2019. 08. 23, 16명)
 
 
 ### 교섭단체와 비교섭단체
@@ -88,16 +88,23 @@
 - - -
 
 #### 서울 서대문구 갑, 전남 목포시
-**더불어민주당 우상호, 국민의당-민생당 박지원**
-박근혜 대통령의 탄핵 과정에서 가장 피말리던 순간은, 국회가 탄핵소추를 의결하는 투표 과정이었다. 당시 야3당의 의석수는 의결정족수인 200명보다 적었으므로, 야당 의원들의 결속이 풀어지지 않도록 단속하는 동시에 집권당(새누리당) 소속 의원들이 ‘용기를 가지고’ 탄핵에 찬성하도록 조심스럽게 판을 깔 필요가 있었다. 이 과정에서 각당 원내대표였던 우상호(더불어민주당), 박지원(국민의당), 노회찬(정의당, 2018년 사망)의 치밀한 공조가 이뤄졌다. 그들은 탄핵의결 절차와 일정에 대해 각당마다 다른 의견이 나오는 것을 조율하고, 새누리당 내의 분위기와 국회 바깥 탄핵촛불집회의 분위기를 보아가며 최대한 많은 찬성표가 나올 타이밍을 쟀다. 그 결과 새누리당 안에서도 최소 60여 명의 의원이 탄핵에 찬성하여, 도저히 불가능해보였던 탄핵소추 및 심판 과정이 원활하게 진행될 수 있었다. 세 원내대표의 광장의 거센 요구와 국회 안의 치열한 정치협상을 모두 충족할 수 있었기에 가능했다.
+**더불어민주당 우상호, 민생당 박지원**
+박근혜 대통령의 탄핵 과정에서 가장 피말리던 순간은, 국회가 탄핵소추를 의결하는 투표 과정이었다. 당시 야3당의 의석수는 의결정족수인 200명보다 적었으므로, 야당 의원들의 결속이 풀어지지 않도록 단속하는 동시에 집권당(새누리당) 소속 의원들이 ‘용기를 가지고’ 탄핵에 찬성하도록 조심스럽게 판을 깔 필요가 있었다. 이 과정에서 각당 원내대표였던 우상호(더불어민주당), 박지원(국민의당), 노회찬(정의당, 2018년 사망)의 치밀한 공조가 이뤄졌다. 
+
+그들은 탄핵의결 절차와 일정에 대해 각당마다 다른 의견이 나오는 것을 조율하고, 새누리당 내의 분위기와 국회 바깥 탄핵촛불집회의 분위기를 보아가며 최대한 많은 찬성표가 나올 타이밍을 쟀다. 그 결과 새누리당 안에서도 최소 60여 명의 의원이 탄핵에 찬성하여, 도저히 불가능해보였던 탄핵소추 및 심판 과정이 원활하게 진행될 수 있었다. 세 원내대표의 광장의 거센 요구와 국회 안의 치열한 정치협상을 모두 충족할 수 있었기에 가능했다.
 
 #### 인천 부평구 을, 경기 고양시 갑
 **더불어민주당 홍영표, 정의당 심상정**
+2016-2020 국회가 선거제도를 개정할 수 있었던 데에는, <공직선거법> 개정안을 발의하고 `신속처리안건(속칭 '패스트트랙'. 법안을 심사하는 위원회 소속 의원의 3/5 이상이 동의하여 신속처리안건으로 지정되면, 위원회의 의결, 법제사법위원회의 법안자구심사, 본회의 의결을 최장 330일 이내에 반드시 마치도록 하는 제도.)`으로 지정하는 데 결정적 역할을 한 두 사람의 노력이 컸다. 
+
+국회 후반기 상임위 배치를 진행할 때 더불어민주당 원내대표였던 홍영표는, 정개특위에서 개정 찬성파가 충분한 다수를 점하도록 했다. 이 과정에서 정개특위 위원장이 된 심상정은 연동형 비례대표제를 오랫동안 주장한 당사자로서 <공직선거법> 개정을 위한 단일안을 각 당이 만들어내도록 강력하게 압박하였다. 결국 두 명의 주도 하에 <공직선거법> 개정안은 신속처리과정을 밟게 되었고, 합의되어 통과되거나 아예 부결되는 양자택일의 상황에서 '강제로' 토론이 진행될 환경이 만들어졌다.
 
 
 #### 서울 동작구 을, 경기 안양시 동안구 을
 **미래통합당 나경원, 심재철**
+나경원(2018~2019)과 심재철(2019~)이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 '국회선진화법'이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
 
+이는 두 가지 측면에서 보수주류 정당의 오랜 기조를 정면으로 뒤집는 일이었다. 120석 내외의 대형 정당이 협상의 주도권을 가져가는 것을 포기했다는 점, 대신 민주적 의사결정의 판을 무력화시켜 극우적 지지층을 완전히 포섭해냈다는 점. 이 내용에 대한 평가는 2020년 총선의 주요 전선 중 하나이다.
 
 
 ## 사법부 및 법률 집행 관련
@@ -119,16 +126,33 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### 부패한 판사
+
+#### 판사를 탄핵하라
+
+#### 아아 조국, 아아 윤석열
+
+#### 고위공직자수사처
+
+
 - - -
 
 #### 서울 은평구 갑, 경기 수원시 을
 **더불어민주당 박주민, 백혜련**
 
+더불어민주당이 추진하는 법원/검찰개혁과 관련하여 미디어에 가장 많이 노출된 두 사람이다. 
+
+
 #### 서울 강서구 을
 **더불어민주당 금태섭**
 
+금태섭이 더불어민주당에서 맡는 역할은 상당히 독특하다. 검사 출신이라는 배경은 그가 검찰의 이익을 대변할 것이라는 인상을 준다. 그러나 2000년대부터 한겨레신문에 "수사 제대로 받는 법"이라는 칼럼을 연재하거나, `모욕죄 및 명예훼손죄의 독소조항(검찰이 특정한 발언을 콕 집어서 수사할 수 있다는 문제가 지적되어 왔다. 모욕죄에 대한 형사처벌을 없애고 민사 손해배상으로 대체하는 주장, (거짓이 아닌)사실을 말하는 것은 명예훼손으로 처벌하지 말자는 주장이 있다.)`을 폐지하자는 주장을 하는 등 수사기관의 권력을 약화시키는 행동도 많이 보여줬기 때문이다. 이런 입체적인 캐릭터는 공수처 설치 문제가 이슈가 되었을 때 특히 주목받았다. "공수처를 통해 대통령이 견제받지 않고 편익에 맞게 수사권을 남용할 수 있다"는 주장으로 공수처 설치를 반대한 것이다.
+
+이 의견에 동의하든 동의하지 않든, 금태섭은 (특히 더불어민주당 지지자에게는) 매우 주목해야 할 정치인이 되었다. 금태섭의 당내 입지가 곧 '더불어민주당이 당내 이견을 포용하느냐 마느냐'를 확인하는 증거처럼 여겨지게 되었기 때문이다.
+
 #### 광주 광산구 을
 **국민의당-무소속 권은희**
+변호사 출신이고, 경찰관으로 특채되었으며, 그 경찰 시절 `국가정보원의 여론조작 개입(이명박 행정부의 국가정보원이 2012년 대통령 선거 당시 인력과 예산을 동원해 각 포털사이트에 조직적으로 댓글을 작성해 여론조작을 꾀한 사건. 차후 수사를 통해 국군사이버사령부, 국군기무사령부 등도 개입한 범정부적 범죄행위로 밝혀진다.)` 여부를 수사하다가 외압을 받고 사직한 경력까지. 권은희의 경력은 사법 및 수사 관련하여 가장 폭넓은 다양성을 
 
 
 ## 행정부 운영, 예산 및 경제 관련
