--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -85,16 +85,21 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### 
+
+
 - - -
 
 #### 서울 서대문구 갑, 전남 목포시
 **더불어민주당 우상호, 민생당 박지원**
+
 박근혜 대통령의 탄핵 과정에서 가장 피말리던 순간은, 국회가 탄핵소추를 의결하는 투표 과정이었다. 당시 야3당의 의석수는 의결정족수인 200명보다 적었으므로, 야당 의원들의 결속이 풀어지지 않도록 단속하는 동시에 집권당(새누리당) 소속 의원들이 ‘용기를 가지고’ 탄핵에 찬성하도록 조심스럽게 판을 깔 필요가 있었다. 이 과정에서 각당 원내대표였던 우상호(더불어민주당), 박지원(국민의당), 노회찬(정의당, 2018년 사망)의 치밀한 공조가 이뤄졌다. 
 
 그들은 탄핵의결 절차와 일정에 대해 각당마다 다른 의견이 나오는 것을 조율하고, 새누리당 내의 분위기와 국회 바깥 탄핵촛불집회의 분위기를 보아가며 최대한 많은 찬성표가 나올 타이밍을 쟀다. 그 결과 새누리당 안에서도 최소 60여 명의 의원이 탄핵에 찬성하여, 도저히 불가능해보였던 탄핵소추 및 심판 과정이 원활하게 진행될 수 있었다. 세 원내대표의 광장의 거센 요구와 국회 안의 치열한 정치협상을 모두 충족할 수 있었기에 가능했다.
 
 #### 인천 부평구 을, 경기 고양시 갑
 **더불어민주당 홍영표, 정의당 심상정**
+
 2016-2020 국회가 선거제도를 개정할 수 있었던 데에는, <공직선거법> 개정안을 발의하고 `신속처리안건(속칭 ‘패스트트랙’. 법안을 심사하는 위원회 소속 의원의 3/5 이상이 동의하여 신속처리안건으로 지정되면, 위원회의 의결, 법제사법위원회의 법안자구심사, 본회의 의결을 최장 330일 이내에 반드시 마치도록 하는 제도.)`으로 지정하는 데 결정적 역할을 한 두 사람의 노력이 컸다. 
 
 국회 후반기 상임위 배치를 진행할 때 더불어민주당 원내대표였던 홍영표는, 정개특위에서 개정 찬성파가 충분한 다수를 점하도록 했다. 이 과정에서 정개특위 위원장이 된 심상정은 연동형 비례대표제를 오랫동안 주장한 당사자로서 <공직선거법> 개정을 위한 단일안을 각 당이 만들어내도록 강력하게 압박하였다. 결국 두 명의 주도 하에 <공직선거법> 개정안은 신속처리과정을 밟게 되었고, 합의되어 통과되거나 아예 부결되는 양자택일의 상황에서 ‘강제로’ 토론이 진행될 환경이 만들어졌다.
@@ -102,7 +107,8 @@
 
 #### 서울 동작구 을, 경기 안양시 동안구 을
 **미래통합당 나경원, 심재철**
-나경원(2018~2019)과 심재철(2019~)이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 ‘국회선진화법’이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
+
+나경원(2018~ 2019)과 심재철(2019~ )이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 ‘국회선진화법’이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
 
 이는 두 가지 측면에서 보수주류 정당의 오랜 기조를 정면으로 뒤집는 일이었다. 120석 내외의 대형 정당이 협상의 주도권을 가져가는 것을 포기했다는 점, 대신 민주적 의사결정의 판을 무력화시켜 극우적 지지층을 완전히 포섭해냈다는 점. 이 내용에 대한 평가는 2020년 총선의 주요 전선 중 하나이다.
 
@@ -116,7 +122,7 @@
 한국의 정치 고관심층 사이에서는 검찰의 ‘중립성’과 수사의 ‘적절성’, 검찰의 인사발령 등 검찰청 관련 내용이 유달리 주목받고, 이에 대한 논쟁이 법사위 안건의 전부인 것 처럼 보도된다. 그러나 법사위가 담당할 다른 사안들도 그에 못지 않게 중요하다. 예를 들어 판사가 제대로 심판할 수 있도록 숙고할 수 있는 여유를 확보하는 구조를 만드는 문제, 개별 판결문을 공공정보로 공개하는 사업, 법무부의 외국인 입국자 관리감독, 범죄자 교정시설(교도소, 구치소 등) 관리감독, 감사원의 행정부 감사업무에 대한 감사 등등. 제아무리 법에 따라 통치하는 국가라 하더라도, 그 법에 따라 감사/수사하고, 기소하고, 판결을 내리고, 판결 내용을 실행하는 과정에는 모두 사람의 주관과 의지가 개입되기 마련이다. 따라서 국회가 법사위를 통해 이 과정에 대해 토론하고 제안하는 것, 사법부와 사법행정기관을 견제하는 것은, 법에 따른 통치가 제대로 실행되기 위해 반드시 필요하다.
 
 ### 사법개혁특별위원회(사개특위)
-2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 `재판거래(이 재판거래는 일제 강제징용 배상판결을 고의로 진행하지 않은 것을 비롯해, 각종 노동, 사회 관련 시국사건에 대한 개입으로 이어졌다.)`를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서(‘고위공직자수사처’, 약칭 ‘공수처’)를 설치하여 검찰 견제구조를 만드는 것. 
+2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 `재판거래(이 재판거래는 일제 강제징용 배상판결을 고의로 진행하지 않은 것을 비롯해, 각종 노동, 사회 관련 시국사건에 대한 개입으로 이어졌다.)`를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서(‘고위공직자범죄수사처’, 약칭 ‘공수처’)를 설치하여 검찰 견제구조를 만드는 것. 
 
 이상의 내용은 문재인 행정부와 민주당계 정당이 오랜 시간동안 역점을 가지고 추진한 사업이자, 사법부와 사법 절차가 민주정에 맞게 작동하기 위해 한 번은 반드시 제대로 논의되어야 했던 사항이었다. “법원과 검찰이 정치적으로 변질되었다”는 주장을 제쳐놓더라도, 검찰이 어떤 사건을 수사하느냐, 법원이 어떻게 판결을 내리느냐에 따라 그 대상이 되는 개인에게 미치는 영향이 엄청나게 크기 때문에, 사법 절차가 잘 진행되도록 재판부와 검찰의 권력이 감시받을 필요가 있기 때문이다.  
 
@@ -132,7 +138,7 @@
 
 #### 아아 조국, 아아 윤석열
 
-#### 고위공직자수사처
+#### 고위공직자범죄수사처
 
 
 - - -
@@ -140,7 +146,7 @@
 #### 서울 은평구 갑, 경기 수원시 을
 **더불어민주당 박주민, 백혜련**
 
-더불어민주당이 추진하는 법원/검찰개혁과 관련하여 미디어에 가장 많이 노출된 두 사람이다. 
+더불어민주당이 추진하는 법원/검찰개혁과 관련하여 미디어에 가장 많이 노출된 두 사람이다. 박주민이 변호사 시절 여러 인권사건, 특히 세월호 침몰사고 피해자의 법률지원을 맡으면서 쌓은 인지도를 바탕으로 대외에서 주목받는 스피커 역할을 했다면, 백혜련은 사개특위 더불어민주당 간사로서 원내에서 공수처 설치를 비롯한 더불어민주당의 입법활동을 총지휘하는 입장이었다. 일반적인 상황이었다면, 두 역할 모두 2016년에 처음 당선된 초선 의원들이 맡기에는 너무 막중한 일이었다. 그러나 가장 개혁적인 이야기를 내야 하는 상황에서 그 역할이 초선 의원에게 주어진 것은 매우 시기적절한 일일수도 있다.
 
 
 #### 서울 강서구 을
@@ -152,7 +158,8 @@
 
 #### 광주 광산구 을
 **국민의당-무소속 권은희**
-변호사 출신이고, 경찰관으로 특채되었으며, 그 경찰 시절 `국가정보원의 여론조작 개입(이명박 행정부의 국가정보원이 2012년 대통령 선거 당시 인력과 예산을 동원해 각 포털사이트에 조직적으로 댓글을 작성해 여론조작을 꾀한 사건. 차후 수사를 통해 국군사이버사령부, 국군기무사령부 등도 개입한 범정부적 범죄행위로 밝혀진다.)` 여부를 수사하다가 외압을 받고 사직한 경력까지. 권은희의 경력은 사법 및 수사 관련하여 가장 폭넓은 다양성을 
+변호사 출신이고, 경찰관으로 특채되었으며, 그 경찰 시절 `국가정보원의 여론조작 개입(이명박 행정부의 국가정보원이 2012년 대통령 선거 당시 인력과 예산을 동원해 각 포털사이트에 조직적으로 댓글을 작성해 여론조작을 꾀한 사건. 차후 수사를 통해 국군사이버사령부, 국군기무사령부 등도 개입한 범정부적 범죄행위로 밝혀진다.)` 여부를 수사하다가 외압을 받고 사직한 경력까지. 권은희의 경력은 사법 및 수사 분야와 관련하여 가장 폭넓은 다양성을 갖춘 인물이다. 이 장점은 관련 분야 사안이 중앙정치의 쟁점으로 떠오를 때 매우 잘 쓰일 수 있다. 
+사개특위 소속이었던 그는, 2019년 4월 백혜련 의원의 공수처 설치법안이 발의된 직후, 공수처의 기소 권한을 다소 제한하는 장치(기소심의위원회)를 추가한 공수처 설치법안을 별도 발의했다. 이 내용 자체는 12월에 부결되었지만, 공수처 설치 자체에 반대하던 의원들 일부도 권은희 발의안을 이용한 협상의 여지를 인정하고, 그제서야 공수처 설치법안은 신속처리안건으로 지정될 수 있었다. 
 
 
 ## 행정부 운영, 예산 및 경제 관련
@@ -222,12 +229,16 @@
 - - -
 
 #### 서울 관악구 갑, 대구 동구 을
-**국민의당-무소속 김성식, 미래한국당 유승민**
+**국민의당-무소속 김성식, 미래한국당 유승민(불출마)**
 
 김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 `한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)`정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 `유수호(유수호는 1988~ 96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)`가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
 
 #### 경기 고양시 갑
 **정의당 심상정**
+
+정당이 행정부에서 가장 힘이 센 국무총리나 기획재정부 장관을 국회에서 다룰 때에는, 그에 걸맞는 중량감있는 인물을 내세워야 한다. 특히 그 정당이 의석수가 적어서 대외적으로 ‘만만하게 보일’ 위험이 크다면, 중량감을 갖춘 인물이 전문성을 갖춘 보좌진의 도움을 받아서 강력한 화력을 발휘해야 한다. 
+
+2016-2020 국회에서, 정의당은 당대표 심상정이 그 역할을 맡았다. 상반기에 정무위, 하반기에 기재위에 소속되었던 심상정은 
 
 #### 대구 수성구 을
 **더불어민주당 김부겸**
@@ -235,6 +246,7 @@
 김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~ 19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
 
 #### 경남 사천시-남해군-하동군
-**더불어민주당 제윤경**
+**더불어민주당 제윤경(불출마)**
+
 
 
