--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -41,20 +41,28 @@
 #### 서울 강서구 병, 서울 영등포구 갑
 **더불어민주당 한정애, 더불어민주당 김영주**
 
-더불어민주당의 노동
+앞과 마찬가지로, 더불어민주당에서 노동정책에 대한 목소리를 내는 몇 안되는 의원들은 모두 노동조합 활동가 출신이다. 이들이 노조활동가가 된 배경도 특이하다. 한정애는 한국산업안전보건공단의 환경공학/산업공학 연구원으로 일하다가 공단 노조위원장이 되었다. 서울신탁은행(현 하나은행) 여자실업농구단 선수였던 김영주는 은퇴 후 신탁은행 창구담당직원이 되었다가, 여성 행원에 대한 임금대우 차별을 시정하기 위해 노조위원장이 된다. 
 
+두 사람 모두 민주당계 정당의 당선권 비례대표 순번을 배정받아서(김영주: 2004년 총선 열린우리당 13번, 한정애: 2012년 총선 민주통합당 11번) 국회로 등용되었지만, 그들의 당내 발언권은 때에 따라 매우 달라진다. 예를 들어, 문재인 행정부 첫 고용노동부 장관이었던 김영주 최저임금 인상, 근로시간 주 최대 52시간 정책, (백혈병으로 사망한 노동자가 유독 많이 나온) 삼성전자 반도체공장의 작업환경측정 결과보고서 공개결정을 집행했으나, 월별 취업자 증가수가 최저치를 기록함에 따라 1년 만에 사임한다. 이 때를 기점으로, 문재인 행정부의 노동개혁 정책이 크게 후퇴하기 시작했다. 
+
+
+<!--
 #### 경북 상주군-군위군-의성군-청송군
 **미래통합당 임이자**
+같은 노조활동가
+-->
 
 #### 인천 연수구 을
 **정의당 이정미**
 
-사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자의 
+사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되도록 하는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자에 대한 노동법 상습위반, 한국도로공사 톨게이트 노동자의 해고위협 문제, 직장 내 괴롭힘과 비정규직 노동자의 산업안전 사안(일명 ‘김용균법’)을 다루는 <산업안전보건법> 개정안 제안 등, 이정미를 통해 다뤄진 사안들은 한국 사회 전반의 노동문제를 매우 깊숙히 파고드는 문제였다.
 
 #### 인천 미추홀구 갑, 충북 청주시 청원구
 **미래통합당 신보라, 국민의당-미래통합당 김수민**
 
-국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원이다. 신보라는 오래된 
+국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원으로, 각 당(새누리당, 미래통합당)에서 최고위원과 충북도당위원장 등의 주요 당직을 맡아 주목받았다. 
+
+두 의원이 모두 여가위에서 활동했고, 그 중에서도 신보라는 4년간 환노위와 여가위에서 모두 활동했다. 특히 신보라는 국회의원으로는 최초로 임신을 공개하고 `출산휴가를 사용(임기 중에 출산한 최초의 의원은 장하나(더불어민주당, 2012~ 16)였으나, 출산 직전까지 이를 공개하지 않아 휴가를 사용하지 않았다.)`하는 상징적인 행동도 보여주었다. 
 
 
 
@@ -109,12 +117,16 @@
 #### 서울 강동구 갑
 **더불어민주당 진선미**
 
-2016-2020 국회의 전반기에 행안위 
+앞서서 본 남인순과 정춘숙의 경우(p. XXX 참고)와 달리, 진선미는 여성문제 관련 소송을 많이 맡는 변호사로서 여성운동에 참여했다. 마침 성범죄와 관련하여 하수상한 시절에, 진선미는 행안위 소속으로 성범죄와 관련된 경찰의 대응을 비판하고, 동성커플이나 결혼하지 않은 노년커플의 생활을 보호하는 정책을 추진하는 데에 앞장섰다. 소라넷의 폐쇄 문제, 불법촬영 및 초소형카메라 문제, `생활동반자법(동거를 하고 경제권을 공유하는 2명의 사람이 신청하면 나이/성별 등에 관계 없이 생활동반자로 지정해서, 주택 구입이나 병원 입원 등 법적 보호자가 필요한 상황에서 혼인관계와 유사하게 인정하는 법률안. 2020년 현재 아직 입법되지 않았다.)` 입법 추진 등이 그 결과물이었다. 진선미는 여성가족부 장관(2018~ 2019)으로 임명된 것도 그 맥락에서 이해할 수 있다. 
+
+특이하게, 그가 소속한 선거구에는 지역에 강력한 영향력을 발휘하고 있는 보수적 대형 종교 커뮤니티(명성교회: 강동구 명일1동)가 자리잡고 있다. 진선미의 그간의 행보가 명성교회 커뮤니티 내부의 반발을 일으킨다면, 2020년 총선에서 어떤 결과로 이어질지 지켜볼 만 하다. 
 
 #### 경기 평택시 갑, 인천 미추홀구 을
-**미래통합당 원유철, 미래통합당-무소속 윤상현**
+**미래통합당 원유철(불출마), 무소속-미래통합당-무소속 윤상현**
 
-오랫동안 활동한 국회의원은 자신의 발언에 따라 외교적인 
+소속정당과 무관하게, 중진 국회의원의 발언과 행보는 외국에서도 상당한 외교적 영향력을 가진다. 언제든 정권교체를 통해 행정부 주요 의사결정권자가 될 수 있고, 또한 민의를 대변하는 국회의원의 발언은 곧 그 나라 유권자가 원하는 외교정책을 발언하는 것이기 하기 때문이다. 중진 국회의원이 외교정책과 관련한 극단적 표현을 삼가야 하는 이유가 여기에 있다. 
+
+2012년부터 외통위에서 활동한 보수주류 정당의 두 중진 의원, 원유철과 윤상현의 외교 관련 발언은 그런 점에서 무게감이 상당했다. 두 사람 모두 손꼽히는 대-북한 강경파이지만, 두 사람의 행보를 갈라놓는 것은 핵무장론이었다. 원유철이 자체 핵무기 개발을 주장하고, 윤상현이 자체 핵무장을 반대하며 미군 핵잠수함을 배치하여 `핵우산(핵무기를 개발하지 않고, 대신 미국이 보유한 핵무기를 배치하여 타국의 핵공격을 예방하는 ‘우산’ 속으로 들어간다는 개념.)`으로 들어가자는 주장을 했다. 핵무기 자체를 반대하는 사람들이나 타국의 외교당국 입장에서는 둘 다 황당한 이야기이지만, 보수적 외교관을 가진 사람들에게는 상당히 진지한 이야기였을 것이다.
 
 
 
@@ -150,8 +162,7 @@
 
 입법활동만 놓고 보면, 2016-2020 국회에서 가장 주목받은 인물이 박용진이다. 시민단체 <정치하는 엄마들>과의 협업으로 국가지원금을 사적으로 사용하거나 횡령하고 유치원 운영은 제대로 하지 않은 사립유치원의 명단을 폭로하고, 이를 예방하기 위한 소위 `“유치원 3법”(교육부와 지방교육청이 유치원의 회계관리를 투명하게 살펴보고, 유치원 내 급식을 학교처럼 엄격하게 관리감독할 수 있도록 하는 <유아교육법>, <사립학교법>, <학교급식법> 개정안)`을 대표발의했으며, 결국 임재훈(국민의당-미래통합당) 의원의 유치원 3법 중재안이 신속처리안건으로 지정되어 통과할 수 있도록 유도했다. 
 
-박용진은 이 과정에서 사립유치원의 비리운영문제를 중앙정치의 주요 이슈로 끌어올리고 효과적인 전국적 여론전을 펼쳤다. 사립유치원 경영자들은 지역구 내부의 여론을 좌지우지하여 국회의원을 낙선시킬 힘이 있다고 여겨졌는데, 이를 
-정면으로 되받아치는 데 성공한 것이다.
+박용진은 이 과정에서 사립유치원의 비리운영문제를 중앙정치의 주요 이슈로 끌어올리고 효과적인 전국적 여론전을 펼쳤다. 사립유치원 경영자들은 지역구 내부의 여론을 좌지우지하여 국회의원을 낙선시킬 힘이 있다고 여겨졌는데, 이를 정면으로 되받아치는 데 성공한 것이다.
 
 #### 인천 미추홀구 갑
 **미래통합당 전희경**
@@ -168,7 +179,7 @@
 
 
 #### 경기 고양시 병, 충북 청주시 흥덕구
-**더불어민주당 유은혜, 도종환**
+**더불어민주당 유은혜(불출마), 도종환**
 
 겨우 재선의원이지만, 대도시가 지역기반인 점(유은혜)과 유명 시인이라는 점(도종환) 때문에 이름값만큼은 높은 두 의원은, 문재인 행정부에서 가장 중요한 시기에 장관으로 임명되었다. 유은혜는 대입제도 개편안과 비리 사립유치원 문제가 본격 논의되던 2018년 10월에 교육부 장관(겸 부총리), 도종환은 평창 동계올림픽 막판준비가 한창이던 2017년 6월에 문화체육관광부 장관이 되었다. 
 
@@ -177,7 +188,7 @@
 #### 경남 창원시 성산구
 **정의당 여영국**
 
-2019년 보궐선거에서 당선된 여영국의 임기는 1년 밖에 되지 않았지만, 그 1년 동안 국정감사를 통해 향후 교육계에 큰 파장을 일으킬 떡밥을 던졌다. 
+2019년 4월의 보궐선거로 당선된 여영국의 임기는 1년 밖에 되지 않았지만, 그 한 번의 국정감사를 통해 향후 대학교육계에 큰 파장을 일으킬 두 가지 떡밥을 던졌다. 바로 입시의 구조와 대학 내 노동의 구조에 관한 것이다. 서울 소재 13개 대학이 수시 입학전형에서 특목고에 대한 사실상의 고교등급제를 적용해 불법 특혜를 주었던 것을 드러낸 것, 서울대학교 청소노동자 사망사건에 대해 노동환경을 조명하고 재발방지를 의제로 꺼낸 것. 이 두 가지 주제가 다른 대학에 대해서도 본격적으로 논의되기 시작하면, 대학생 인구 감소에 따른 (교육부 주도의) 대학구조개편과 맞물려 대학들에게 여론과 행정 측면의 커다란 압박으로 다가올 수 있다. 
 
 #### 경기 오산시
 **더불어민주당 안민석**
@@ -191,18 +202,21 @@
 **인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 
 
 ### 과학기술정보방송통신위원회(과기정통위) #2
+
+
 ### 농림축산식품해양수산위원회(농축수위)
-사람들이 자주 잊곤 하지만, 농림, 축산, 수산업 역시 매우 거대하고 중요한 ‘산업’이다. 
+사람들이 자주 잊곤 하지만, 농림, 축산, 수산업도 매우 거대하고 중요한 ‘산업’이다. 식량과 관련하여, 
 
 ### 산업통상자원중소벤처기업위원회(산통자위)
 이 긴 이름의 위원회가 소관하는 중앙정부 부처는 산업통상자원부와 중소벤쳐기업부이다. 산업통상자원부는 사업규제, 기술특허 등 상업·서비스업·공업·광업 전반의 육성에 관한 정책, 에너지·자원 관련정책, 무역·통상 관련정책을 총괄한다. 다만 그 중에서도 중소기업 육성, 지원, 벤처기업 창업과 관련된 부분은 중소벤처기업부가 맡고 있다. 
 산업구조가 변화하고 (기후변화가 겹쳐서) 에너지 생산구조가 변화해야 하는 
 
 ### 환경노동위원회(환노위) #3
+산업과 
 
 
 ### 국토교통위원회(국토위)
-국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육로/항공 교통시설 관리업무이다. 
+국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육상/항공 교통시설 관리업무이다. 
 
 많은 지역구 국회의원들이 국토위에 배정되기를 선호한다. 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 유리하기 때문이다. 
 
@@ -215,19 +229,29 @@
 
 #### 부산 서구-동구?
 **미래통합당 송희경**
-여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p. XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은, 
+여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p. XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은 KT 전무이사를 지낸 컴퓨터공학 및 경영학 전공자이다. 이력에서 볼 수 있듯 그는 연구직보다는 산업계 종사자라고 볼 수 있다. 이런 속성을 가진 의원의 입법활동은 자세히 관찰해야 한다. 산업의 구조와 발전상황을 잘 파악하고 있는 인물이기에 산업의 발전을 위해 당장 필요한 양질의 입법활동을 기대할 수 있지만, 한편으로는 이미 자리잡은 기존 기업의 이해관계에 맞춘 입법활동을 하여, “이익보는 일은 기업이 사유화하고 손해볼 일은 사회에 떠념겨서” 산업의 발전을 가로막을 수도 있기 때문이다. 
+
+아무튼 IT계열 창업이 주목받고 촉진되어야 한다는 여론이 큰 상황에서, 그는 보수주류 정당이 이를 가장 잘 대변할 수 있다고 앞세워진 인물이다. 실제로, 그는 과방위에서 4년 동안 있었을 뿐만 아니라, 보수주류 정당 내에서 경제산업 문제에 관여하는 조직에 왠만하면 참여하는 당내 주요 인사가 되었다.
+
 
 #### 경기 고양시 정
-**더불어민주당 김현미, 미래통합당 김현아**
+**더불어민주당 김현미(불출마), 미래통합당 김현아**
+
+부동산 가격, 특히 주택 가격과 임대료 관련 문제는 민주당계 행정부에서 언제나 주요 공격/방어 이슈였다. 그 이슈의 한 가운데에 있을 두 의원을 소개한다. 문재인 행정부 초대 국토교통부 장관(2017~ ) 김현미, 그리고 도시기획자 출신의 김현아. 김현미는 부동산 문제에 매우 민감한 일산 지역구의 3선 의원으로서 의견을 직접 청취해왔다는 전문성이 있고, 김현아는 2016년에 비례대표로 당선되어 실무 전문성이 아직 살아있다는 강점이 있다. 국회 대정부질문에서 김현아는 김현미를 상대로 자주 질의를 했고, 두 사람의 질의응답은 문재인 행정부의 부동산 정책의 방향성 전체에 대한 날선 공방으로 이어졌다.
+
+특이하게도, 현직 장관인 김현미가 출마하지 않는 고양시 정 지역구에, 김현아가 출마한다. 이 지역구의 선거결과는 문재인 행정부의 부동산 정책 전체를 평가하는 상징성을 가지게 되었다.
 
 #### 전북 전주시 병
 **민생당 정동영**
 
-의외로 4선 의원 정동영은
+부동산 정책을 논의하는 자리에서 자주 언급되는 의외의 이름이 있다. 노무현 행정부 시절 집권당(열린우리당) 대표이기도 했던, 민주당계 정당의 거물 정동영이다. 그는 각종 언론 인터뷰를 통해, 노무현 행정부의 권력이 주택가격 급등과 함께 무너졌다는 관점을 피력했다. 그것을 반복하지 않기 위함인지, 이명박 행정부가 출범한 이후 정동영은 지속적으로 분양가 상한제, 분양원가 공개, 후분양제(주택건설 완료 이후 분양제) 도입 등 주택가격 상승을 억제하기 위한 정책을 지속적으로 주장했다. 이 관점은 문재인 행정부 시절까지도 이어져서, 문재인 행정부의 주택건설 확대 정책이 “노무현 행정부의 실패를 반복할 것”이라는 흔치 않은 비판을 던지기도 했다.  
 
-#### 전남 담양군-함평군-영광군-장성군
-**더불어민주당 이개호**
+#### 전북 전주시 을, 전남 담양군-함평군-영광군-장성군
+**미래한국당 정운천, 더불어민주당 이개호**
 
+농민 직능 국회의원이 한 명도 없었던 2016-2020 국회에서, 농업과 가장 가깝다고 할 의원 두 명은 모두 농업/식품 관련 장관을 역임했다. 정운천은 이명박 행정부의 초대 농림수산식품부 장관을, 이개호는 문재인 행정부의 두 번째 농림축산식품부 장관을 역임했다. 정운천은 참다래 개발사업으로 알려진 농업경영인으로서, 이개호는 농업인이 많은 전라남도의 부지사를 지낸 고위공무원으로서의 경력을 바탕으로 장관직을 수행할 수 있었다. 
+
+중앙정계 관점에서 보았을 때, 두 인물은 2016년 총선을 통해 각 당의 가장 입지전적한 정치인이 되어버렸다. 정운천은 보수주류 정당(새누리당)에서 20년 만에 처음 당선된 전북 국회의원이었고, 이개호는 국민의당 열풍 속에서 살아남은 더불어민주당의 유일한 전남 국회의원이었다. 
 
 
 #### 전북 군산시, 울산 동구
